Add various optimizations
Add descriptions, css for mobile, img lazy loading, mathjax script conditional loading, etc.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 title: Mathematikos
+description: "Matematika je abeceda, ktorou Boh napísal vesmír. Tieto slová sa pripisujú Galileovi a zatiaľ všetko naznačuje, že sú pravdivé. Matematika je naozaj nástroj, ktorým sa da popísať a predpovedať svet okolo nás."
 ---
 <div class="page">
 <div class="slideshow-container">
@@ -24,10 +25,10 @@ title: Mathematikos
   <img src="assets/images/homepage/statistics.png" alt="Štatistika">
 </div>
 
-</div> <!--End of slideshow-container--> 
+</div> <!--End of slideshow-container-->
 
 <div id="boy">
-	<img src="assets/images/homepage/boy.png" alt="Chlapec.">
+  <img src="assets/images/homepage/boy.png" alt="Chlapec.">
 </div>
 
 </div>
