--- a/pages/aGeom_history.html
+++ b/pages/aGeom_history.html
@@ -1,6 +1,6 @@
 ---
 title: Vznik analytickej geometrie
-description: "vznik analytickej geometrie"
+description: "O vznik analytickej geometrie sa pričinil hlavne francúzsky matematik René Descartes. Snažil sa vyriešiť niektoré problémy, ktoré ostali po renesancii. Prišiel na to, ako sa dajú geometrické útvary zapísať rovnicami."
 keywords: "Rene Descartes, La Geometrie"
 permalink: vznik_analytickej_geometrie
 ---
@@ -14,7 +14,7 @@ Na konci renesancie sa do jednej francúzskej rodiny narodil malý René Descart
 Jeho život rýchlo preletíme až po dielo La Géométrie, lebo dovtedy len rástol, kým nevyrástol, študoval na univerzitách a sťahoval sa zo štátu do štátu až skončil v Holandsku. Tam niekedy napísal spomínané La Géométrie. V tejto knižke je opísané ako sa dajú geometrické útvary a krivky zapísať rovnicami. Určite si povieš, že je to ohromný nápad, keď sa to musíš teraz učiť. Ale zas až tak od veci to nie je. Krivky zapísané pomocou rovníc dali vzniknúť Newtonovým deriváciám a tie zase pomohli fyzike. Fyzika priniesla na papier teórie o tom, že stroje môžu lietať a technika to zasa dala do praxe. Samozrejme s priamym pričinením analytickej geometrie. Okrem toho, že analytická geometria pomohla vzniknúť lietadlám, strojom či vesmírnym raketám, používa sa aj v medicíne a počítačovej grafike.
 
 <figure>
-  <img src="../assets/images/aGeom_histLaGeometria.png" alt="Rene Descartes, La Géométrie">
+  <img src="assets/images/aGeom_histLaGeometria.png" alt="Rene Descartes, La Géométrie">
   <figcaption>Obr. 1.: Kúsok obsahu zo slávneho Descartovho diela La Géométrie.</figcaption>
 </figure>
 
