--- a/pages/aGeom_relativePosLinePlane.html
+++ b/pages/aGeom_relativePosLinePlane.html
@@ -1,6 +1,6 @@
 ---
 title: Vzájomná poloha priamky a roviny
-description: "Vzájomná poloha priamky a roviny"
+description: "Ak je priamka rovnobežná s rovinou, nemajú ani jeden bod spoločný. Ak je priamka rôznobežná s rovinou, tak niekde priamka rovinu pretína a teda majú iba jeden bod spoločný. V prípade, že priamka patrí rovine, tak majú spoločných nekonečne veľa bodov (každý bod, ktorý je na priamke, patrí aj rovine)."
 keywords: "rovina"
 permalink: analyticka_geometria_vzajomna_poloha_priamka_rovina
 ---
@@ -14,7 +14,7 @@ Rovina a priamka majú voči sebe tri druhy polôh. <b>Priamka patrí rovine, pr
 V prípade, že priamka leží na rovine, je možné, že ťa zvedie povedať, že priamka je totožná s rovinou. Na toto si daj pozor, je to zle. Všetky body priamky síce môžeš nájsť na rovine, ale nie všetky body roviny sú na priamke. Priamka a rovina nie sú rovnaké a slovo totožné znamená, že rovnaké sú.<br /><br />
 
 <figure>
-  <img src="../assets/images/aGeom_posLinePlane.png" alt="Vzájomná poloha priamky a roviny">
+  <img src="assets/images/aGeom_posLinePlane.png" alt="Vzájomná poloha priamky a roviny">
   <figcaption>Obr. 1. Priamka a rovina sa môžu navzájom nachádzať v troch rôznych polohách. Môžu byť rôznobežné, rovnobežné alebo priamka môže ležať v rovine.</figcaption>
 </figure>
 
@@ -33,17 +33,17 @@ Po dosadení rovnice priamky do rovnice roviny, budeme mať jednu neznámu - par
 Vyskúšame si to na príklade:
 
 <figure>
-  <img src="../assets/images/aGeom_posLinesPlaneExample.png" alt="Vzájomná poloha priamky a roviny">
+  <img loading="lazy" src="assets/images/aGeom_posLinesPlaneExample.png" alt="Vzájomná poloha priamky a roviny">
   <figcaption>Obr. 2. Na obrázku je nakreslená rovina a tri priamky. K rovine poznáme všeobecnú rovnicu, a k priamkam máme body a ich smerové vektory. Chceme nejako zistiť ich vzájomnú polohu. Z obrázku sa veľa nedozvieme, tak musíme ísť počítať.</figcaption>
 </figure>
 
 <figure>
-  <img src="../assets/images/aGeom_posLinesPlaneExample1.png" alt="Vzájomná poloha priamky a roviny">
+  <img loading="lazy" src="assets/images/aGeom_posLinesPlaneExample1.png" alt="Vzájomná poloha priamky a roviny">
   <figcaption>Obr. 3. Chceme zistiť aká je vzájomná poloha priamky a roviny. Potrebujeme na to všeobecnú rovnicu roviny a parametrickú rovnicu priamky. Súradnice vyjadrené parametrickou rovnicou priamky dosadíme za súradnice do všeobecnej rovnice roviny a spočítame.</figcaption>
 </figure>
 
 <figure>
-  <img src="../assets/images/aGeom_posLinesPlaneExample2.png" alt="Vzájomná poloha priamky a roviny">
+  <img loading="lazy" src="assets/images/aGeom_posLinesPlaneExample2.png" alt="Vzájomná poloha priamky a roviny">
   <figcaption>Obr. 4. Ďalšie dva príklady na vzájomnú polohu priamky a roviny. Postup počítania je stále rovnaký. Zoberieme súradnice bodu vyjadrené pomocou parametrickej rovnice priamky a dosadíme ich za súradnice bodu vo všeobecnej rovnici roviny.</figcaption>
 </figure>
 
