--- a/pages/aGeom_usage.html
+++ b/pages/aGeom_usage.html
@@ -1,8 +1,9 @@
 ---
 title: Využitie analytickej geometrie
-description: "využitie analytickej geometrie"
+description: "Analytická geometria prevádza geometrické problémy na algebraické. Teda nakreslené veci z papiera prevádza na rovnice. Využíva sa to napríklad v počítačoch, medicíne alebo strojárstve."
 keywords: "využitie analytickej geometrie"
 permalink: vyuzitie_analytickej_geometrie
+mathjax: true
 ---
 
 <div class="content">
@@ -11,7 +12,7 @@ permalink: vyuzitie_analytickej_geometrie
 
 Analytická geometria sa používa preto, lebo geometrické problémy prevádza na algebraické. To znamená, že niečo, čo vieš nakresliť, prevedie na niečo, s čím vieš počítať. Analytická geometria vznikla na konci renesancie. Jej úlohou bolo dať odpovede astronómií, námorníctvu, obchodu a podobným veciam, ktoré si renesančný človek vymyslel. My sa prenesieme o pár storočí dopredu, do nášho letopočtu. Dnes sa bežný človek nesnaží objaviť novú galaxiu a ani si nerobí námornícky kurz. Zdalo by sa, že s analytickou geometriou sa stretne iba v učebniciach. Ale nie je to pravda. V rôznych veciach je skrytá na každom našom kroku.
 <figure>
-  <img src="../assets/images/aGeom_usage.png" alt="Využitie analytickej geometrie">
+  <img src="assets/images/aGeom_usage.png" alt="Využitie analytickej geometrie">
   <figcaption>Obr. 1.[1]: Príklady využitia analytickej geometrie.</figcaption>
 </figure>
 
@@ -19,14 +20,14 @@ Analytická geometria sa používa preto, lebo geometrické problémy prevádza 
 Súhlasím, nadpis použitie matematiky v matematike neznie užitočne, ale príklad je to pekný. Určite poznáš vzorec $(a+b)^2=a^2 + 2ab + b^2$. Vieme si ho takto nakresliť.
 
 <figure>
-  <img src="../assets/images/aGeom_usage2.png" alt="Vzorec (a+b) na 2">
+  <img loading="lazy" src="assets/images/aGeom_usage2.png" alt="Vzorec (a+b) na 2">
   <figcaption>Obr. 2.: Vzorec $(a+b)^2$.</figcaption>
 </figure>
 
 Podobne vieme geometricky vyjadriť aj vzorec $(a+b)^3$, iba namiesto štvorcov použijeme kocky.
 
 <figure>
-  <img src="../assets/images/aGeom_usage3.png" alt="Vzorec (a+b) na 3">
+  <img loading="lazy" src="assets/images/aGeom_usage3.png" alt="Vzorec (a+b) na 3">
   <figcaption>Obr. 3.: Vzorec $(a+b)^3$.</figcaption>
 </figure>
 
