--- a/pages/gonio_functionsUsage.html
+++ b/pages/gonio_functionsUsage.html
@@ -1,6 +1,6 @@
 ---
 title: Použitie goniometrických funkcií
-description: "Použitie goniometrických funkcií"
+description: "Goniometrické funkcie vedia opísať vlnenie a tak sa používajú napríklad v informatike na prácu so zvukom. Vďaka tomu sa dá zvuk nahrať, spracovať či niekam uložiť alebo poslať. Na opis rôznych vlnení ich používa aj fyzika."
 keywords: "goniometrické funkcie, sínus, kosínus, zvuk, mikrofón, počítač, vlnenie, mechanické vlnenie"
 permalink: pouzitie_goniometrickych_funkcii
 ---
@@ -11,7 +11,7 @@ permalink: pouzitie_goniometrickych_funkcii
 
 <div class="audioPlayer">
 <audio controls>
-  <source src="../assets/sounds/gonio_birds.mp3" type="audio/mpeg">
+  <source src="assets/sounds/gonio_birds.mp3" type="audio/mpeg">
 Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránku otvoriť v inom prehliadači.
 </audio>
 </div>
@@ -31,7 +31,7 @@ V škole si sa asi už dopočul, že <b>zvuk je mechanické vlnenie. To znamená
 Poďme sa pozrieť na zvukovú vlnu zblízka. Môžeme si ju predstaviť ako vodnú hladinu, do ktorej padne kameň. Vlnky sa šíria preč od miesta, kde padol kameň a postupne slabnú. Častice, ktoré tvoria vodu sa však nehýbu smerom preč od kameňa. Ostávajú na svojom mieste, iba sa pohnú hore alebo dole. Ako keď diváci na štadióne robia mexickú vlnu. Tiež neutekajú zo svojich miest preč. Iba sa v správnom čase zdvihnú. Tak nejak je to aj s časticami nielen vo vode, ale aj vo vzduchu.<br /><br />
 
 <figure>
-  <img src="../assets/images/gonio_soundWave.gif" alt="Zvuková vlna">
+  <img loading="lazy" src="assets/images/gonio_soundWave.gif" alt="Zvuková vlna">
   <figcaption>Obr. 1.: Takto vyzerá zvuková vlna. Reproduktor rozkmytá častice vzduchu blízko seba. Tie náražajú do svojich susediek a tie zasa do svojich. Animácia je úryvok z <a href="https://cs.khanacademy.org/science/fyzika-vlneni-a-zvuk/x34b3f391df7f0014:mechanicke-vlneni/x34b3f391df7f0014:zvuk/v/production-of-sound" target="_blank">videa</a>, v ktorom je pekne vysvetlené, ako sa zvuk dostane od reproduktora až po tvoje ucho. Video je v češtine, takže si ho môžu pozrieť aj menej jazykovo zdatní.[1] </figcaption>
 </figure>
 
@@ -44,7 +44,7 @@ Zvukové vlny k nám prichádzajú skoro stále. Všimni si, že aj <b>keď si m
 O zachytenie zvukovej vlny sa stará tvoje ucho. Najprv to vonkajšie, ktoré ti trčí z hlavy. Zachytená vlna sa dostane k bubienku, ktorý rozvibruje kostičky v strednom uchu. Tie donesú signál k orgánu kochlea (asi ho poznáš pod menom slimák). Tam už čakajú vláskové bunky, ktoré premenia vibrácie na elektrický signál do nervu. Pomocou nervovej sústavy sa dostane do mozgu a tam tvoj mozog vyhodnotí, že si niečo počul.[2]
 
 <figure>
-  <img src="../assets/images/gonio_ear.png" alt="Ľudské ucho">
+  <img loading="lazy" src="assets/images/gonio_ear.png" alt="Ľudské ucho">
   <figcaption>Obr. 2.: Vľavo hore je vonkašie ucho. Vpravo hore je stredné ucho. Vľavo dole je vnútorné ucho a vpravo dole je sluchový nerv. Za obrázok vďačíme <a href="https://www.medel.com/sk/about-hearing/how-hearing-works" target="_blank">tejto stránke</a>, kde je naše ucho dobre popísané.[2]</figcaption>
 </figure>
 
@@ -54,7 +54,7 @@ Na nahrávanie zvuku sa zvyčajne používa mikrofón. Určite si vo svojom živ
 V mikrofóne sa nachádza tzv. membrána. To je malý kúsok kovu (alebo iného vhodného materiálu), ktorý je ako štuplík jemne nastoknutý na magnet a okolo neho je navitá cievka. <b>Zvukové vlny narážajú do membrány a ona sa hýbe hore a dole. Spolu s ňou sa hýbe aj cievka</b>. Keďže si na hodinách fyziky určite dával pozor, vieš, že takýto <b>pohyb cievky okolo magnetu vzbudzuje elektrický prúd</b>. Elektrický prúd nesie zvukový signál na ďalšie spracovanie. <br /><br />
 
 <figure>
-  <img src="../assets/images/gonio_howMicrophoneWorks.gif" alt="Ako funguje mikrofón">
+  <img loading="lazy" src="assets/images/gonio_howMicrophoneWorks.gif" alt="Ako funguje mikrofón">
   <figcaption>Obr. 3.: Nahrávanie zvuku pomocou mikrofónu. Ukážka je z <a href="https://www.youtube.com/watch?v=d_crXXbuEKE&ab_channel=IntoTheOrdinary" target="_blank">tohoto videa</a>.[3]</figcaption>
 </figure>
 
@@ -65,14 +65,14 @@ Inak zvuku, ktorý je už "zapísaný v elektrickom prúde" sa hovorí <b>analó
 <b>Reproduktor funguje opačne ako mikrofón</b>. Na začiatku stojí zariadenie, ktoré prevedie digitálny signál na elektrický. Prúd ide po dráte až sa dostane k cievke. Cievka je stále ten istý drát, len je namotaný okolo valčeka. Elektrický prúd vytvára magnetické pole a z drátu, kadiaľ tečie robí magnet. Známa to vec z fyziky je dôležitá hlavne pri cievke. Okolo cievky je obyčajný magnet. No a čo robia dva magnety keď sú pri sebe? Buď sa priťahujú alebo odpudzujú. Teda buď sa posúvajú k sebe alebo od seba. Tým, že v cievke je elektrický prúd raz silnejší a raz slabší, mení sa aj jej magnetické pole. S magnetom okolo nej sa raz priťahuje viac, inokedy menej. Môže sa aj prepólovať, vtedy sa budú odpudzovať. To má za následok, že cievka sa hýbe hore a dole. Na valček s cievkou je napojená membrána. Ona chodí tiež hore a dole, naráža do vzduchu a vytvára zvukové vlny, ktoré počujeme.[4]
 
 <h2>Prevedenie zvukového signálu na digitálnu informáciu</h2>
-Z mikrofónu treba zvuk dostať do počítača. Elektrický signál je spojitý, teda ide v jednom kuse nepretržite. Takýto signál je istotne kvalitný a sú v ňom zachytené aj tie najjemnejšie detaily zvuku. Ibaže ho nevieme celý čarovne preniesť do počítača.<br /><br /> 
+Z mikrofónu treba zvuk dostať do počítača. Elektrický signál je spojitý, teda ide v jednom kuse nepretržite. Takýto signál je istotne kvalitný a sú v ňom zachytené aj tie najjemnejšie detaily zvuku. Ibaže ho nevieme celý čarovne preniesť do počítača.<br /><br />
 
 Našťastie po svete chodili šikovný ľudia, ktorí vymysleli zariadenie na <b>spracovanie zvuku pre počítače</b>. Táto mašinka sa volá <b>Analog to digital converter</b> a funguje nasledovne. <b>Každých x sekúnd zmeria veľkosť signálu</b>, ktorý do nej prichádza. <b>Čas a veľkosť sa zapíšu do počítača</b>. Keď si z toho spravíme graf, že čas bude na osi x a veľkosť signálu na osi y, prekvapivo dostaneme funkciu, ktorá je zložená z viacerých sínusov rôznych frekvencií, amplitúd a fázových posunov. Skrátka taký dobrý sínusový guláš. Táto funkcia opisuje daný kúsok prírody fakt dobre. Vďaka nej je <b>zvuk veľmi dobre popísaný</b>, vieme ho očistiť od šumu, zosilniť, zoslabiť, postrihať. Skrátka všetko, čo sa so zvukom dá robiť.<br /><br />
 
 Nepredstavuj si však nádhernú čistú vlniacu sa krivku. Zvuk taký nie je. Nachádza sa v ňom veľa rôznych tónov, hlasov, šumu a každá drobnosť je opísaná inak.
 
 <figure>
-  <img id="humanVoice" src="../assets/images/gonio_humanVoice.png" onclick="changeHumanVoiceImage()" alt="Ľudský hlas opísaný sínusom.">
+  <img loading="lazy" id="humanVoice" src="assets/images/gonio_humanVoice.png" onclick="changeHumanVoiceImage()" alt="Ľudský hlas opísaný sínusom.">
   <figcaption>Obr. 4.: Takto vyzerajú zhruba 4 sekundy ľudskej reči popísanej sínusmi. Po kliknutí na obrázok sa ti ukáže iný obrázok. To je poriadne prizoomovaná ľudská reč. Začína sa ukazovať štruktúra sínusov. Za povšimnutie stojí, že po priblížení to už nie sú 4 sekundy reči, ale 4 milisekundy ľudskej reči.</figcaption>
 </figure>
 
@@ -81,11 +81,11 @@ Nepredstavuj si však nádhernú čistú vlniacu sa krivku. Zvuk taký nie je. N
 function changeHumanVoiceImage(){
 
 var humanVoiceImg = document.getElementById("humanVoice")
-if(humanVoiceImg.src.match("../assets/images/gonio_humanVoiceZoomed.png")){
-	humanVoiceImg.src="../assets/images/gonio_humanVoice.png"
+if(humanVoiceImg.src.match("assets/images/gonio_humanVoiceZoomed.png")){
+	humanVoiceImg.src="assets/images/gonio_humanVoice.png"
 }
 else{
-	humanVoiceImg.src="../assets/images/gonio_humanVoiceZoomed.png"
+	humanVoiceImg.src="assets/images/gonio_humanVoiceZoomed.png"
 }
 
 }
@@ -102,7 +102,7 @@ Ako názornú ukážku sme si vybrali tón A4. Má peknú okrúhlu frekvenciu 44
 <div class="audioPlayer">
 Tón A4. Frekvencia 440Hz. Amplitúda 1.<br />
 <audio controls>
-  <source src="../assets/sounds/gonio_toneA.mp3" type="audio/mpeg">
+  <source src="assets/sounds/gonio_toneA.mp3" type="audio/mpeg">
 Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránku otvoriť v inom prehliadači.
 </audio>
 </div>
@@ -112,7 +112,7 @@ Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránk
 <div class="audioPlayer">
 Tón A4. Frekvencia 440Hz. Amplitúda 0,025.<br />
 <audio controls>
-  <source src="../assets/sounds/gonio_toneASilent.mp3" type="audio/mpeg">
+  <source src="assets/sounds/gonio_toneASilent.mp3" type="audio/mpeg">
 Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránku otvoriť v inom prehliadači.
 </audio>
 </div>
@@ -122,14 +122,14 @@ Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránk
 <div class="audioPlayer">
 Tón A3. Frekvencia 220Hz. Amplitúda 1.<br />
 <audio controls>
-  <source src="../assets/sounds/gonio_toneA3.mp3" type="audio/mpeg">
+  <source src="assets/sounds/gonio_toneA3.mp3" type="audio/mpeg">
 Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránku otvoriť v inom prehliadači.
 </audio>
 </div>
 
 <br /><br />
 
-<b>Pomocou zmeny frekvencie a amplitúdy sa dajú spraviť všetky tóny v rôznych hlasitostiach</b>. Ako iste tušíš, orchestrálna skladba by sa z toho vyrobiť nedala. Husle, trúbka, klavír, klarinet. Každý z nich <b>vie zahrať tón A, ale každému inak zneje</b>. Kde sú teda skryté čary, že každý nástroj zahrá tón inak? Kúzlo je skryté v znamienku +. V obyčajnom sčítavaní.<br /><br /> 
+<b>Pomocou zmeny frekvencie a amplitúdy sa dajú spraviť všetky tóny v rôznych hlasitostiach</b>. Ako iste tušíš, orchestrálna skladba by sa z toho vyrobiť nedala. Husle, trúbka, klavír, klarinet. Každý z nich <b>vie zahrať tón A, ale každému inak zneje</b>. Kde sú teda skryté čary, že každý nástroj zahrá tón inak? Kúzlo je skryté v znamienku +. V obyčajnom sčítavaní.<br /><br />
 
 Keď rôzne hudobné nástroje hrajú tón A, každý z nich má najvýraznejšiu frekvenciu 440Hz. No každý z nich popritom vydáva aj iné frekvencie. Ich amplitúda (hlasitosť) je menšia. Tón "neprekričia", ale dodajú mu niečo, čo voláme farba. Práve <b>farba tónu odlišuje od seba rôzne nástroje</b>.<br /><br />
 
@@ -138,7 +138,7 @@ V ukážke zafarbíme tón A rôznymi frekvenciami. Na tóny hudobných nástroj
 <div class="audioPlayer">
 Tón A4. Frekvencia 440Hz. Amplitúda 1. K nemu je pričítaná fekvencia 220Hz s amplitúdou 0.5: <b>sin(440x) + 0.5*sin(220x)</b>.<br />
 <audio controls>
-  <source src="../assets/sounds/gonio_toneA_05x220Hz.mp3" type="audio/mpeg">
+  <source src="assets/sounds/gonio_toneA_05x220Hz.mp3" type="audio/mpeg">
 Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránku otvoriť v inom prehliadači.
 </audio>
 </div>
@@ -148,7 +148,7 @@ Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránk
 <div class="audioPlayer">
 Tón A4. Frekvencia 440Hz. Amplitúda 1. K nemu je pričítaná fekvencia 880Hz s amplitúdou 0.5: <b>sin(440x) + 0.5*sin(880x)</b>.<br />
 <audio controls>
-  <source src="../assets/sounds/gonio_toneA_05x880Hz.mp3" type="audio/mpeg">
+  <source src="assets/sounds/gonio_toneA_05x880Hz.mp3" type="audio/mpeg">
 Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránku otvoriť v inom prehliadači.
 </audio>
 </div>
@@ -158,7 +158,7 @@ Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránk
 <div class="audioPlayer">
 Tón A4. Frekvencia 440Hz. Amplitúda 1. K nemu je pričítaná fekvencia 880Hz s amplitúdou 0.5 a frekvencia 220Hz s amplitúdou 0.25: <b>sin(440x) + 0.5*sin(880x) + 0.25*sin(220x).</b><br />
 <audio controls>
-  <source src="../assets/sounds/gonio_toneA_05x880Hz_025x220Hz.mp3" type="audio/mpeg">
+  <source src="assets/sounds/gonio_toneA_05x880Hz_025x220Hz.mp3" type="audio/mpeg">
 Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránku otvoriť v inom prehliadači.
 </audio>
 </div>
@@ -167,7 +167,7 @@ Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránk
 
 
 <figure>
-  <img id="tonesSlideShow" src="../assets/images/gonio_graphToneA.png" onclick="changeTonesImages()" alt="Ľudský hlas opísaný sínusom.">
+  <img loading="lazy" id="tonesSlideShow" src="assets/images/gonio_graphToneA.png" onclick="changeTonesImages()" alt="Ľudský hlas opísaný sínusom.">
   <figcaption>Obr. 5.: Galéria grafov k spomínaným tónom. Klikaním na obrázok si ich vieš prezerať.</figcaption>
 </figure>
 
@@ -177,12 +177,12 @@ var tonesIterator = 0;
 
 function changeTonesImages(){
 
-const toneImages = ["../assets/images/gonio_graphToneA.png",
-					"../assets/images/gonio_graphToneASilent.png",
-					"../assets/images/gonio_graphToneADeep.png",
-					"../assets/images/gonio_graphToneADeepTimbre.png",
-					"../assets/images/gonio_graphToneAHightTimbre.png",
-					"../assets/images/gonio_graphToneATwoTimbres.png"]
+const toneImages = ["assets/images/gonio_graphToneA.png",
+					"assets/images/gonio_graphToneASilent.png",
+					"assets/images/gonio_graphToneADeep.png",
+					"assets/images/gonio_graphToneADeepTimbre.png",
+					"assets/images/gonio_graphToneAHightTimbre.png",
+					"assets/images/gonio_graphToneATwoTimbres.png"]
 
 tonesIterator = tonesIterator+1
 if (tonesIterator >= 6)
@@ -198,10 +198,10 @@ tonesSlideShow.src=toneImages[tonesIterator]
 
 Prešli sme si zopár jednoduchých zvukov. Teraz si už určite vieš spojiť tón s tým, ako vyzerá v grafe. <b>Zložitejšie zvuky, ako je napríklad hudba alebo reč, sa skladajú z veľmi veľa sínusov rôznych frekvencií a amplitúd</b>. Na prvý pohľad to vyzerá ako jeden veľký chaos, no dá sa v tom spraviť poriadok.
 
-<b>Pokročilými metódami sa dá zistiť z akých frekvencií sa zvuk skladá</b>. Dokonca vieme aj povedať amplitúdu frekvencií. Slúži na to niečo, čo sa volá frekvenčná analýza. Robí sa pomocou Fourierovej transformácie. Týmto chceme pozdraviť všetkých budúcich a aj terajších vysokoškolákov, ktorým barón Fourier nedá spávať. Fourierovu transformáciu teraz rozoberať nebudeme. Chceme vám však ukázať frekvenčnú analýzu tónu A4 rôznych hudobných nástrojov. Je na nej pekne vidieť, že frekvencia 440Hz má pri každom nástroji najväčšiu amplitúdu. Okrem nej má každý nástroj zastúpené aj iné frekvencie. Tieto frekvencie dodávajú farbu pre zvuk, ktorý vychádza z nástroja. <b>Vďaka farbe tónu znie každý nástroj inak a my vieme rozoznať, či hrajú husle, piáno alebo flauta</b>. 
+<b>Pokročilými metódami sa dá zistiť z akých frekvencií sa zvuk skladá</b>. Dokonca vieme aj povedať amplitúdu frekvencií. Slúži na to niečo, čo sa volá frekvenčná analýza. Robí sa pomocou Fourierovej transformácie. Týmto chceme pozdraviť všetkých budúcich a aj terajších vysokoškolákov, ktorým barón Fourier nedá spávať. Fourierovu transformáciu teraz rozoberať nebudeme. Chceme vám však ukázať frekvenčnú analýzu tónu A4 rôznych hudobných nástrojov. Je na nej pekne vidieť, že frekvencia 440Hz má pri každom nástroji najväčšiu amplitúdu. Okrem nej má každý nástroj zastúpené aj iné frekvencie. Tieto frekvencie dodávajú farbu pre zvuk, ktorý vychádza z nástroja. <b>Vďaka farbe tónu znie každý nástroj inak a my vieme rozoznať, či hrajú husle, piáno alebo flauta</b>.
 
 <figure>
-  <img src="../assets/images/gonio_graphMusicInstruments.png" alt="Frekvenčná analýza rôznych hudobných nástrojov.">
+  <img loading="lazy" src="assets/images/gonio_graphMusicInstruments.png" alt="Frekvenčná analýza rôznych hudobných nástrojov.">
   <figcaption>Obr. 6.: Husle, ukulele, piáno, flauta. Tieto štyri nástroje zahrali tón A, ktorý bol nahratý do počítača. Fourierovov transformáciou sa zistilo, z akých frekvencií sa tóny skladajú. Výsledok sa nakreslil do grafu, kde na osi x sú frekvencie a na osi y je amplitúda (teda ako hlasno je danú frekvenciu v tóne počuť).[5]</figcaption>
 </figure>
 
@@ -220,13 +220,13 @@ Pre niekoho možno prekvapujúca informácia, ale <b>zvieratá počujú inak ako
 
 &#128008; <b>Mačky:</b> jeden výskum sa zaoberal tým, či mačky ľúbia muziku. Ľúbia, ale nie hocijakú. Musí byť skomponovaná práve pre ne. Mačky vydávajú zvuky v určitých frekvenciách a v určitom "rytmuse". Výskumníci zložili mačacie pesničky obsahujúce ich obľúbené frekvencie. Keď pesničky pustili svojim poslucháčkam, tie sa túlili k reproduktorm ako divé.[6]<br /><br />
 
-&#128375; <b>Pavúky:</b> tarantula nemá uši a ani žiadna časť jej mozgu nespracováva zvuk.  Napriek tomu však počuje. Jemné chĺpky na jej nožičkách dokážu zachytiť zvukové vlny a pomáhajú jej s orientáciou v priestore. Iný, menší, druh pavúkov má na predných labkách nervové bunky, ktoré dokážu spracovať určité frekvencie. Dokáže tak určiť dosť presnú polohu svojej koristi.[7]<br /><br /> 
+&#128375; <b>Pavúky:</b> tarantula nemá uši a ani žiadna časť jej mozgu nespracováva zvuk. Napriek tomu však počuje. Jemné chĺpky na jej nožičkách dokážu zachytiť zvukové vlny a pomáhajú jej s orientáciou v priestore. Iný, menší, druh pavúkov má na predných labkách nervové bunky, ktoré dokážu spracovať určité frekvencie. Dokáže tak určiť dosť presnú polohu svojej koristi.[7]<br /><br />
 
 &#128051; <b>Veľryby:</b> desaťtisíce kilometrov. To je vzdialenosť, na ktorú sa počujú veľryby. Veľryba plávajúca pri Írsku sa vie dorozumieť s tou, ktorá brázdi vody Karibiku. Ľudia im však komunikáciu kazia. Ťažba ropy, veľké priemyselné rybolovy a iné činnosti robia oceán hlučným miestom, v ktorom rozhovor veľrýb zaniká.[7]<br /><br />
 
 &#128330; <b>Holuby:</b> časť vynikajúcich orientačných schopností holubov je postavená na ich ušiach. Vnútri ucha majú kúsky nejakého kovového materiálu, ktorý je schopný zachytiť zemské magnetické pole. To pomáha holubovi vytvoriť si mapu terénu a navigovať sa v ňom. Dá sa teda povedať, že holuby "počujú" zemské magnetické pole.[8]<br /><br />
 
-&#129419; <b>Nočné motýle:</b> istý druh pre niekoho potvor, pre niekoho krásnych stvorení, drží rekord v zvieracej ríši.  Dokáže počuť najvyššie frekvencie. My ľudia počujeme 20 000Hz. Tieto stvorenia počujú 300 000Hz.[7]<br /><br />
+&#129419; <b>Nočné motýle:</b> istý druh pre niekoho potvor, pre niekoho krásnych stvorení, drží rekord v zvieracej ríši. Dokáže počuť najvyššie frekvencie. My ľudia počujeme 20 000Hz. Tieto stvorenia počujú 300 000Hz.[7]<br /><br />
 
 &#129436; <b>Domáce vtáčiky:</b> vtáky, ktoré chováme ako domácich miláčikov majú radi hudbu. Dokonca niektorá sa im páči viac a niektorá menej. Vo všeobecnosti majú radi klasickú hudbu alebo jazz. Daj si však pozor, čo necháš svojho miláčika počúvať. Jeden papagáj si obľúbil hudobný žáner, ktorý jeho majiteľ veľmi nemusel. Vtákovi sa pesničky páčili, tak sa ich naučil a spieval ich svojmu gazdovi celé dni.[7]
 
