--- a/pages/gonio_unit_circle.html
+++ b/pages/gonio_unit_circle.html
@@ -1,6 +1,6 @@
 ---
 title: Jednotková kružnica
-description: "vznik jednotkovej kružnice a jej použitie"
+description: "V goniometrii sa jednotková kružnica používa na zobrazenie goniometrických funkcií. Sú na nej vidno vzťahy medzi týmito funkciami. Stred jednotkovej kružnice je v začiatku súradnicovej sústavy a jej polomer je jedna."
 keywords: "goniometria, jednotková kružnica"
 permalink: jednotkova_kruznica
 ---
@@ -9,12 +9,12 @@ permalink: jednotkova_kruznica
 
 <h1>Jednotková kružnica</h1>
 
-<b>Jednotková kružnica je kružnica, ktorej stred je v začiatku súradnicovej sústavy (v bode 0,0) a jej polomer je jedna.</b>  Polomer nie je v žiadnych jednotkách. Nie je to 1 cm, ani 1 m, ani 1 km. Je to skrátka iba 1. Súradnicová sústava rozdeľuje plochu na štyri časti. Tieto časti voláme prvý kvadrant, druhý kvadrant, tretí kvadrant a štvrtý kvadrant. Zvykne sa to označovať rímskymi číslami.<br /><br />
+<b>Jednotková kružnica je kružnica, ktorej stred je v začiatku súradnicovej sústavy (v bode 0,0) a jej polomer je jedna.</b> Polomer nie je v žiadnych jednotkách. Nie je to 1 cm, ani 1 m, ani 1 km. Je to skrátka iba 1. Súradnicová sústava rozdeľuje plochu na štyri časti. Tieto časti voláme prvý kvadrant, druhý kvadrant, tretí kvadrant a štvrtý kvadrant. Zvykne sa to označovať rímskymi číslami.<br /><br />
 
 Niektoré pramene uvádzajú, že jednotkovú kružnicu poznali už v starom Babylone. <b>Používali ju na to, aby si pre daný uhol odmerali pomery strán.</b> Potom sa zjavila až v knihe <i>Introductio in analysin infinitorum</i> od Leonarda Eulera [1]. To bolo tak v prvej polovici 18. storočia. <b>Použil ju na znázornenie rôznych vecí</b>, a na to isté ju používame aj dnes. Dajú sa na nej zobraziť napríklad <b>goniometrické funkcie alebo komplexné čísla</b>. Keď sú veci na nej prehľadne nakreslené, hneď sa s tým ľuďom lepšie počíta.
 
 <figure>
-  <img src="../assets/images/gonio_unitCircleAux.png" alt="Jednotková kružnica">
+  <img src="assets/images/gonio_unitCircleAux.png" alt="Jednotková kružnica">
   <figcaption>Obr. 1.: Jednotková kružnica</figcaption>
 </figure>
 
