--- a/pages/gonio_usage.html
+++ b/pages/gonio_usage.html
@@ -1,6 +1,6 @@
 ---
 title: Použitie goniometrie
-description: "pouzitie goniometrie"
+description: "Goniometria sa používa aj v geodézii na vypočítanie veľkostí, ktoré sa nedajú odmerať. Je to napríklad výška budovy. Viac prezradí v rozhovore geodet."
 keywords: "goniometria, geodézia, astronómia, staroveké Grécko"
 permalink: pouzitie_goniometrie
 ---
@@ -12,7 +12,7 @@ Pýtaš sa prečo staroveké národy mali potrebu vymýšľať takéto hlúposti
 
 Aj dnes sa s goniometriou stretneš na veľa miestach. Používa sa všade tam, kde potrebujeme odmerať nejakú výšku, vzdialenosť alebo uhol a nemáme k tomu prístup. Namiesto toho odmeriame to, čo môžeme a vďaka goniometrii dorátame to, čo potrebujeme.
 <figure>
-  <img src="../assets/images/gonio_usage.png" alt="Použitie goniometrie.">
+  <img src="assets/images/gonio_usage.png" alt="Použitie goniometrie.">
   <figcaption>Obr. 1 [1].: S goniometriou vieme vypočítať výšku budov. Ako sa to presne robí, to vedia povedať geodeti. Starí Egypťania vedeli vypočítať výšku pyramíd (a vďaka tomu ich postaviť) pomocou pomerov strán - predchodcu goniometrie. Gréci zasa dokázali pomerne presne určiť vzdialenosť mesiaca od Zeme.</figcaption>
 </figure>
 
@@ -31,7 +31,7 @@ Napríklad ak chcete odmerať výšku nejakej budovy, tak máte niekoľko možno
 Napríklad, keď sa idú búrať, chceme vedieť, kam až môžu spadnúť.
 
 <figure>
-  <img src="../assets/images/gonio_usageExample.png" alt="Meranie výšky budovy..">
+  <img loading="lazy" src="assets/images/gonio_usageExample.png" alt="Meranie výšky budovy..">
   <figcaption>Obr. 2.: Developer chce zbúrať starú bytovku a nahradiť ju novou. Pri búraní však treba byť opatrný, aby ruiny nezničili okolie. Treba vypočítať, kam má/môže bytovka spadnúť a podľa toho spraviť opatrenia. Geodet vie odmerať vzdialenosti a uhly nakreslené modrou farbou. To, čo je nakreslené červenou, to musí dopočítať.</figcaption>
 </figure>
 
@@ -40,14 +40,14 @@ Raz sa mi stalo, že sme zameriavali nový plynovod. Merali sme rovno pred oknam
 Alebo keď sme raz čakali na kolegu, ktorý išiel po auto, tak nám po zbalených prístrojoch začali loziť mačiatka. To bolo také milé spríjemnenie naozaj dlhého dňa.
 
 <figure>
-  <img src="../assets/images/gonio_kitty.jpg" alt="Mačiatko loziace po zbalených prístrojoch">
+  <img loading="lazy" src="assets/images/gonio_kitty.jpg" alt="Mačiatko loziace po zbalených prístrojoch">
   <figcaption>Obr. 3.: Mačiatko loziace po zbalených prístrojoch</figcaption>
 </figure>
 
 <h2>Zdroje</h2>
 
 <div class='literature'>
-[1] https://www.pexels.com 
+[1] https://www.pexels.com
 </div>
 
 </div>
