--- a/pages/math_history.html
+++ b/pages/math_history.html
@@ -1,6 +1,6 @@
 ---
 title: Vývoj matematiky
-description: "vývoj matematiky"
+description: "Matematika začala už v praveku, kedy ľudia potrebovali rozlíšiť, či je niečoho veľa alebo málo. Ako sa ľudstvo začalo združovať do prvých usadlostí a tie rozvíjať na prvé mestá a štáty, potrebovalo nástroj, ktorý mu umožní stavať, spravovať štát, obchodovať či cestovať. A tak zdokonalilo matematiku. S jej zdokonaľovaním sa pokračuje až doteraz, aby sme vedeli aspoň trošičku pochopiť svet okolo nás."
 keywords: "história matematiky, vývoj matematiky"
 permalink: vyvoj_matematiky
 ---
@@ -12,7 +12,7 @@ permalink: vyvoj_matematiky
 <!--....................................ENTRY BEGIN...........................................-->
 <div class="history_container">
 <div class="history_intro">
-<img src="../assets/images/history/ishangoBone.png" alt="Kosť Ishango">
+<img src="assets/images/history/ishangoBone.png" alt="Kosť Ishango">
 <h3>20 000 pr. n. l.</h3>
 <h3>kosť Ishango</h3>
 </div>
@@ -29,7 +29,7 @@ Kosť menom Ishango bola objavená v Kongu, v oblasti Ishango. Odtiaľ je jej me
 <!--....................................ENTRY BEGIN...........................................-->
 <div class="history_container">
 <div class="history_intro">
-<img src="../assets/images/history/rhindPapyrus.png" alt="Rhind papyrus">
+<img loading="lazy" src="assets/images/history/rhindPapyrus.png" alt="Rhind papyrus">
 <h3>1650 pr. n. l.</h3>
 <h3>Rhind papyrus</h3>
 </div>
@@ -46,13 +46,13 @@ Papyrus sa našiel v Egypte a zrejme pochádza zo Strednej ríše. Nachádza sa 
 <!--....................................ENTRY BEGIN...........................................-->
 <div class="history_container">
 <div class="history_intro">
-<img src="../assets/images/history/analyticGeometry.png" alt="Analytická geometria">
+<img loading="lazy" src="assets/images/history/analyticGeometry.png" alt="Analytická geometria">
 <h3>1637</h3>
 <h3>Analytická geometria</h3>
 </div>
 
 <div class="history_text">
-Renesancia nechala po sebe niekoľko problémov, na ktoré dovtedajšia matematika nestačila. Napríklad potrebovali zistiť údaje z funkcie tvorenej krivkou. Dostať ich nemohli, pretože funkciu nedokázali ani poriadne nakresliť. Našťastie sa francúz René Descartes narodil ako chorľavé dieťa, a tak mal veľa času študovať. V roku 1637 vychádza jeho dielo La Géometrie. Prišiel na nový spôsob abstrakcie, ktorá prevádza geometrické problémy na algebraické. To znamená, že tam, kde nestačí kreslenie, prichádza matematika. V jeho diele predstavil spôsob, ako zapísať geometrické prvky pomocou matematiky, a tak umožnil spočítať aj veci, ktoré sa nakresliť nedajú (napr. 4 a viac rozmerný priestor. Ver tomu, že dnes sa počíta s veľa rozmernými priestormi všade). 
+Renesancia nechala po sebe niekoľko problémov, na ktoré dovtedajšia matematika nestačila. Napríklad potrebovali zistiť údaje z funkcie tvorenej krivkou. Dostať ich nemohli, pretože funkciu nedokázali ani poriadne nakresliť. Našťastie sa francúz René Descartes narodil ako chorľavé dieťa, a tak mal veľa času študovať. V roku 1637 vychádza jeho dielo La Géometrie. Prišiel na nový spôsob abstrakcie, ktorá prevádza geometrické problémy na algebraické. To znamená, že tam, kde nestačí kreslenie, prichádza matematika. V jeho diele predstavil spôsob, ako zapísať geometrické prvky pomocou matematiky, a tak umožnil spočítať aj veci, ktoré sa nakresliť nedajú (napr. 4 a viac rozmerný priestor. Ver tomu, že dnes sa počíta s veľa rozmernými priestormi všade).
 </div>
 
 <!--br /-->
