--- a/pages/num_letters.html
+++ b/pages/num_letters.html
@@ -1,8 +1,9 @@
 ---
 title: Písmená
-description: "ako prišli do matematiky písmená"
+description: "Aj keď to na prvý pohľad nevyzerá, ale písmená matematiku zjednodušili a nie skomplikovali. Dlhú dobu vyzerala matematika ako rozprávka, pretože používala veľa textu. Všetky problémy boli zadané slovne, opísané rozsiahlimi esejami. O nejakých všeobecných riešeniach sa dalo baviť len ťažko. Vďaka písmenám sa problémy zjednodušili a zovšeobecnili."
 keywords: "písmená, Viete, abstrakcia"
 permalink: pismena
+mathjax: true
 ---
 
 <div class="content">
@@ -12,7 +13,7 @@ permalink: pismena
 Čím dlhšie sa učíš matematiku, tým je v nej viac písmenok a tým pádom aj viac starostí.
 
 <figure>
-  <img src="../assets/images/lettersMeme.png" alt="Čím si starší, tým je v matematike viac písmen">
+  <img src="assets/images/lettersMeme.png" alt="Čím si starší, tým je v matematike viac písmen">
   <figcaption>Obr. 1.: Čím si starší, tým je v matematike viac písmen.</figcaption>
 </figure>
 
