--- a/pages/num_numberSets.html
+++ b/pages/num_numberSets.html
@@ -1,6 +1,6 @@
 ---
 title: Číselné množiny
-description: "číselné množiny"
+description: "Čísla delíme do skupín, ktoré sa nazývajú množiny. Poznáme prirodzené čísla (ozn. N), celé čísla (ozn. Z), riacionálne čísla (ozn. Q), iracionálne čísla (ozn. Q') a reálne čísla (ozn. R). Okrem nich existujú aj iné."
 keywords: "číselné množiny, prirodzené čísla, celé čísla, racionálne čísla, iracionálne čísla, reálne čísla"
 permalink: ciselne_mnoziny
 ---
@@ -19,11 +19,11 @@ permalink: ciselne_mnoziny
 </ul>
 
 <figure>
-  <img src="../assets/images/numSets.png" alt="Číselné množiny">
+  <img src="assets/images/numSets.png" alt="Číselné množiny">
   <figcaption>Obr. 1.: Tu sú číselné množiny aj s príkladmi čísiel, ktoré do nich patria.</figcaption>
 </figure>
 
-<h2>Ako vznikli číselné množiny</h2> 
+<h2>Ako vznikli číselné množiny</h2>
 Na začiatku našich dejín ľudia nepotrebovali počítať, nemali žiadnu matematiku a bolo im dobre. Lenže potom sa začali rozvíjať, vykonávali čoraz náročnejšie činnosti a už začali potrebovať čísla.<br /><br />
 
 Jeden z prvých dôkazov toho, že ľudia vedeli počítať je kosť Ishango [3]. Na kosti sú krátke zárezy, akoby paličky, ktoré označujú nejaký počet. Inde sa zase používali kúsky hliny až postupne sa vyvinuli čísla, ako ich poznáme dnes. Viac o vzniku čísiel si môžeš prečítať v článku <a href="ako_vznikli_cisla" target="_blank">Ako vznikli čísla</a>.<br /><br />
@@ -35,7 +35,7 @@ Neskôr, keď už začali žiť vo väčších spoločenstvách museli začať r
 Staroveký Egypt bola asi najrozvinutejšia civilizácia, aká dovtedy existovala. Obchodovali s cudzinou, stavali úžasné stavby, zaujímali sa o medicínu a astronómiu. So všetkými týmito činnosťami určite prišla potreba niečo rozdeliť na časti. Dôkazom toho je papyrus [4], kde je zaznamenané prvé použitie delenia na svete. <b>Pri delení už nestačia celé čísla</b>, lebo niečo môžeš rozdeliť na polovicu, na tretiny, štvrtiny atď. Odteraz už ľudia budú môcť používať desatinné čísla.
 
 <figure>
-  <img src="../assets/images/numSets_IshangoRhind.png" alt="Číselné množiny">
+  <img loading="lazy" src="assets/images/numSets_IshangoRhind.png" alt="Číselné množiny">
   <figcaption>Obr. 2.: Hore je kosť Ishango, na ktorej je zachytené prvé ľudské počítanie. Dole je papyrus, kde je prvý raz použité delenie a racionálne čísla.</figcaption>
 </figure>
 
@@ -60,7 +60,7 @@ Nule venujeme zvlášť kapitolu, lebo je to číslo, ktorému ľudia dlho neroz
 
 Jej prvé začiatky boli medzi Sumermi, ktorí ju používali ako náhradu za cifry. Vtedy už používali pozičnú číselnú sústavu a keď chceli vyjadriť, že na danej pozícií cifra chýba, napísali tam nulu. Napríklad pri čísle 100 chýba cifra na pozícií jednotiek a desiatok. Oni ju písali ako dva malé kliny.<br /><br />
 
-Ďalší významný míľnik v živote nuly prišiel niekedy v 7. storočí n.l.. Indický matematik Brahmagupta prišiel na to, že <b>nula môže reprezentovať aj počet</b>. Keď sa k niečomu pričíta alebo odčíta, tak sa to nezmení a keď sa odčíta číslo od samého seba, výsledok je nula.<br /><br /> 
+Ďalší významný míľnik v živote nuly prišiel niekedy v 7. storočí n.l.. Indický matematik Brahmagupta prišiel na to, že <b>nula môže reprezentovať aj počet</b>. Keď sa k niečomu pričíta alebo odčíta, tak sa to nezmení a keď sa odčíta číslo od samého seba, výsledok je nula.<br /><br />
 
 O storočie neskôr Arabský matematik al Khowarizmi spravil symbol nuly tak, ako ho poznáme dnes. A až na začiatku druhého tisícročia sa nula dostala medzi ľudí, keď ju spopularizoval Fibonacci.<br /><br />
 
@@ -75,11 +75,11 @@ O storočie neskôr Arabský matematik al Khowarizmi spravil symbol nuly tak, ak
 
 ⬛🐦<b>Vrany:</b> Šikovné matematičky sú aj vrany. Dokážu určiť presný počet vecí. Robili s nimi také pokusy, že im ukázali tablet, kde bolo zobrazené určité množstvo nejakých vecí. Potom im ukázali viacero tabletov a na jednom z nich bolo rovnaké množstvo, ale iných vecí. Vrany si vybrali tablet s rovnakým množstvom, aj keď objekty boli iné.<br /><br />
 
-&#128038; <b>Vták robin:</b> Na Novom Zélande žije vtáčik podobný nášmu vrabcovi a volá sa robin. Ten vie počítať tak dobre, že sa ani nedá oklamať. Ukázali mu nejaký počet červíkov, a on si myslel, že ich dostane všetkých. Ale nedostal, dali mu menej. Robin na to prišiel a hodnú chvíľu sa tváril urazene.<br /><br /> 
+&#128038; <b>Vták robin:</b> Na Novom Zélande žije vtáčik podobný nášmu vrabcovi a volá sa robin. Ten vie počítať tak dobre, že sa ani nedá oklamať. Ukázali mu nejaký počet červíkov, a on si myslel, že ich dostane všetkých. Ale nedostal, dali mu menej. Robin na to prišiel a hodnú chvíľu sa tváril urazene.<br /><br />
 
 &#128014; <b>Kôň Hans:</b> Pán Wilhelm von Osten žil v 19. storočí, býval v Nemecku a bol učiteľ na dôchodku. Doma sa už strašne nudil, tak si vymyslel, že naučí svojho koňa Hansa počítať. Kôň mal matematický talent a zakrátko sa naučil sčítavať, odčítavať, násobiť a dokonca aj deliť. Svoje odpovede dával svetu na známosť tak, že zahrabal nohou.<br /><br />
 
-&#129436; <b>Papagáj Alex:</b> Irene Pepperberg mala papagája menom Alex. Irene učila papagája asi 10 rokov, ale vyplatilo sa to. Naučil sa veci, o ktorých sa myslelo, že vtáci nikdy nedokážu. Rozumel reči, vedel rátať, trochu čítať a Irene ho naučila niečo, čo majú len ľudia. Alex si dokázal uvedomiť sám seba. Vráťme sa však k matematike. Irene zobrala päť zelených kociek, šesť zelených loptičiek, štyri ružové loptičky a tri ružové kocky. Potom sa spýtala papagája, že koľko je ružových loptičiek. Alex odpovedal, že štyri. V tejto úlohe musel Alex zvládnuť viacero vecí. Musel si uvedomiť, že sa pýtajú práve jeho, musel porozumieť tomu, čo sa ho pýtajú. Musel vedieť rozlíšiť farby, tvary a musel ich vedieť spočítať.<br /><br /> 
+&#129436; <b>Papagáj Alex:</b> Irene Pepperberg mala papagája menom Alex. Irene učila papagája asi 10 rokov, ale vyplatilo sa to. Naučil sa veci, o ktorých sa myslelo, že vtáci nikdy nedokážu. Rozumel reči, vedel rátať, trochu čítať a Irene ho naučila niečo, čo majú len ľudia. Alex si dokázal uvedomiť sám seba. Vráťme sa však k matematike. Irene zobrala päť zelených kociek, šesť zelených loptičiek, štyri ružové loptičky a tri ružové kocky. Potom sa spýtala papagája, že koľko je ružových loptičiek. Alex odpovedal, že štyri. V tejto úlohe musel Alex zvládnuť viacero vecí. Musel si uvedomiť, že sa pýtajú práve jeho, musel porozumieť tomu, čo sa ho pýtajú. Musel vedieť rozlíšiť farby, tvary a musel ich vedieť spočítať.<br /><br />
 
 &#128018; <b>Šimpanz Ai:</b> Ai je samička šimpanza, ktorú vychoval istý japonský vedec. Už sme tu mali zvieratá, ktoré vedeli rozlíšiť počet nejakých vecí. Ai zašla ešte kúsok ďalej. Naučila sa číslice a vedela k nim priradiť počet. Je to úctyhodné hlavne preto, lebo vedela k niečomu abstraktnému, ako je číslica priradiť konkrétny počet. Iná vec je, keď fyzicky vidíš päť orechov, a iná, keď vidíš iba číslicu a máš si za ňou predstaviť päť vecí.[2]
 
@@ -100,8 +100,7 @@ O storočie neskôr Arabský matematik al Khowarizmi spravil symbol nuly tak, ak
 
 [7] Miller, John. 2019. Earliest Known Uses of Some of the Words of Mathematics. https://jeff560.tripod.com/r.html<br /><br />
 
-[8] Karashi, Takayuki. 2016. Why are real numbers called ‘real’?. 
-https://www.quora.com/Why-are-real-numbers-called-%E2%80%98real%E2%80%99
+[8] Karashi, Takayuki. 2016. Why are real numbers called ‘real’?. https://www.quora.com/Why-are-real-numbers-called-%E2%80%98real%E2%80%99
 </div>
 
 </div>
