--- a/pages/stat_data.html
+++ b/pages/stat_data.html
@@ -1,16 +1,16 @@
 ---
-title: Štatistika-údaje
-description: "údaje v štatistike"
+title: Údaje v štatistike
+description: "Štatistika je odbor matematiky, ktorý sa snaží vytiahnuť z údajov nejaké informácie. Pre finálny výsledok je veľmi dôležitý aj zber údajov a ich úprava."
 keywords: "údaje, dáta, získavanie údajov"
 permalink: statistika_udaje
 ---
 
 <div class="content">
 
-<h1>Údaje</h1>
+<h1>Údaje v štatistike</h1>
 
 <h2>Získavanie údajov</h2>
-Štatistika nie sú iba nejaké vzorce, ktorými sa dajú z dát vytiahnuť informácie. Štatistika začína už pri získavaní údajov.<br /><br /> 
+Štatistika nie sú iba nejaké vzorce, ktorými sa dajú z dát vytiahnuť informácie. Štatistika začína už pri získavaní údajov.<br /><br />
 
 Keď v škole počítaš príklad zo štatistiky, tak máš väčšinou údaje zadané. Napríklad niečo takéto: Učiteľ telocviku meral žiakom 5.A. čas na 100 metrov behu. Časy boli takéto: 28.5s, 30.1s, 25.6s, 48.2s atď. S údajmi teda nemáš žiadne starosti, iba ich zoberieš a vyrátaš to, čo od teba chcú.<br /><br />
 
@@ -18,11 +18,11 @@ V skutočnosti je získavanie údajov zložitejšie. Predstav si, že robíš na
 
 Myslíš, že sa spýtaš každého jedného obyvateľa Slovenska? Asi nebudeš mať možnosť obehať celé Slovensko. Musíš si teda vybrať iba zopár nejakých ľudí. Zistíš údaje iba o nejakej časti Slovákov, nie o všetkých. Keď vypočítaš priemer z napr. 1000 Slovákov, môžeš povedať, že platí pre celú krajinu? Asi nie. To je prvý problém.<br /><br />
 
-Teda už máš vybratú vzorku. Ale vybral si ju správne? Keď vyberieš iba ľudí, ktorí žijú v bytoch, dostaneš trochu iný priemer, ako keď vyberieš iba farmárov. Takisto  deti budú chovať menej zvierat ako dospelí, takže keď budeš robiť priemer zo svojich kamarátov dostaneš iný priemer, ako keby si ho robil z rodičov alebo starých rodičov. Z tohto vyplýva, že nemôžeš do vzorky vyberať iba "rovnakých" ľudí. To je druhý problém. Dá sa vyriešiť tým, že do vzorky vyberieš z každého rožka troška. Spýtaš sa aj detí, aj dospelých, aj tých čo majú alergiu na srsť, aj tých čo zvieratá chovajú vo veľkom. Rôznorodú vzorku dostaneš tak, že ľudí povyberáš náhodne. Keď ti pomáha náhoda, je malá pravdepodobnosť, že do vzorky povyťahuješ rovnakých ľudí.<br /><br />
+Teda už máš vybratú vzorku. Ale vybral si ju správne? Keď vyberieš iba ľudí, ktorí žijú v bytoch, dostaneš trochu iný priemer, ako keď vyberieš iba farmárov. Takisto deti budú chovať menej zvierat ako dospelí, takže keď budeš robiť priemer zo svojich kamarátov dostaneš iný priemer, ako keby si ho robil z rodičov alebo starých rodičov. Z tohto vyplýva, že nemôžeš do vzorky vyberať iba "rovnakých" ľudí. To je druhý problém. Dá sa vyriešiť tým, že do vzorky vyberieš z každého rožka troška. Spýtaš sa aj detí, aj dospelých, aj tých čo majú alergiu na srsť, aj tých čo zvieratá chovajú vo veľkom. Rôznorodú vzorku dostaneš tak, že ľudí povyberáš náhodne. Keď ti pomáha náhoda, je malá pravdepodobnosť, že do vzorky povyťahuješ rovnakých ľudí.<br /><br />
 
 Už máš vo vzorke aj rôznych ľudí, ale máš ju dostatočne veľkú? Veľkosť vzorky tiež vplýva na výsledky. Čím ju máš väčšiu, tým budú údaje presnejšie.<br /><br />
 
-Toto sú  také základné problémy, s ktorými sa štatistika stretá hneď na začiatku. S tým, že nemôžeš získať údaje od všetkých, naozaj nič nespravíš. Dá sa tomu pomôcť tým, že sa budeš snažiť mať vzorku čo najväčšiu. A tiež čo najrôznorodejšiu.
+Toto sú také základné problémy, s ktorými sa štatistika stretá hneď na začiatku. S tým, že nemôžeš získať údaje od všetkých, naozaj nič nespravíš. Dá sa tomu pomôcť tým, že sa budeš snažiť mať vzorku čo najväčšiu. A tiež čo najrôznorodejšiu.
 
 <h2>Získanie údajov o futbalistoch</h2>
 Vráťme sa k nášmu problému, že chceš kúpiť futbalistov. Chceš ten najlepší klub, ale aby si mohol objektívne určiť, ktorý je ten najlepší, potrebuješ zistiť, kde hrajú tí najlepší futbalisti.<br /><br />
@@ -35,11 +35,11 @@ Namerané údaje zapísali do tabuľky a zverejnili ju na internet [1]. My sme s
 Ako správny štatistik, musíš sa na začiatku oboznámiť s tvojimi údajmi. Prvú vec, ktorú sme zisťovali, bola veľkosť údajov. Počítač nám vypísal, že máme 18 278 hráčov a každý má 104 atribútov. Aby si vedel, čo je atribút, tak je to nameraný údaj o futbalistovi. Napríklad jeho meno, plat, pozícia, tím, sila strely, rýchlosť a ďalších vyše sto podobných vecí. Pri výpočtoch nám bude pomáhať počítač, lebo ak by sme mali analyzovať 18 000 futbalistov na papier, tak by sme si ruky po lakte zodrali.
 
 <figure>
-  <img src="../assets/images/stat_RawData.png" alt="=Údaje o futbalistoch">
+  <img loading="lazy" src="assets/images/stat_RawData.png" alt="=Údaje o futbalistoch">
   <figcaption>Obr. 1.: Údaje o futbalistoch zapísané v tabuľke. Sú tu iba niektoré údaje o niektorých futbalistoch. Nezmestili sa všetky, pretože futbalistov je viac ako 18 000 a o každom futbalistovi je 104 údajov.</figcaption>
 </figure>
 
-Potom sme zisťovali aké máme údaje o futbalistoch. Počítač sme poprosili, aby nám vypísal názvy atribútov. Tu sú: 
+Potom sme zisťovali aké máme údaje o futbalistoch. Počítač sme poprosili, aby nám vypísal názvy atribútov. Tu sú:
 
 <figure style="text-align: justify">
 <i>
