--- a/pages/stat_intro.html
+++ b/pages/stat_intro.html
@@ -1,6 +1,6 @@
 ---
 title: Úvod do štatistiky
-description: "úvod do štatistiky"
+description: "Štatistika je odbor matematiky, ktorý sa snaží vytiahnuť z údajov nejaké informácie. Na základe výsledkov štatistiky sa často robia dôležité rozhodnutia."
 keywords: "uvod do statistiky, statistika"
 permalink: statistika_uvod
 ---
@@ -13,7 +13,7 @@ Hneď na začiatku štatistiky máme pre teba dobrú správu. Vyhral si nehoráz
 
 Na svete je veľa klubov. Ktorý z nich je ten naj? Môžeš si ho vybrať podľa toho, komu fandíš, ale môže prísť niekto silnejší a tvoji miláčikovia skončia zle-nedobre. Takže osobné sympatie necháme bokom a vyberieme tím objektívnejším spôsobom. Možno už tušíš, že mierime k nadpisu tohto článku. K štatistike.<br /><br />
 
-<b>Štatistika sa používa na vyhodnocovanie rôznych údajov.</b> Tých je fúra zo všelijakých meraní, experimentov, prieskumov. Firmy môžu mať údaje, keď merajú, či vyrábajú dobré súčiastky, z testovania výrobkov, z toho, keď zisťujú, aká je predajnosť výrobkov, a ďalších vecí. Vedci a študenti na výškach získavajú údaje z rôznych experimentov. Športovci si môžu merať svoj výkon, rýchlosť behu a neviem čo ešte. Na úradoch a v  agentúrach sa získavajú údaje z rôznych prieskumov.<br /><br />
+<b>Štatistika sa používa na vyhodnocovanie rôznych údajov.</b> Tých je fúra zo všelijakých meraní, experimentov, prieskumov. Firmy môžu mať údaje, keď merajú, či vyrábajú dobré súčiastky, z testovania výrobkov, z toho, keď zisťujú, aká je predajnosť výrobkov, a ďalších vecí. Vedci a študenti na výškach získavajú údaje z rôznych experimentov. Športovci si môžu merať svoj výkon, rýchlosť behu a neviem čo ešte. Na úradoch a v agentúrach sa získavajú údaje z rôznych prieskumov.<br /><br />
 
 Údajov býva viac alebo menej, spravidla však dosť. Dosť môže byť niekoľko stoviek, tisíc a možno aj miliónov. Toto všetko treba porovnať, vyhodnotiť a dostať z toho nejaké čitateľné výsledky. Ak by si mal dvoch športovcov, ktorých treba porovnať, tak by si o každom musel prečítať tisíc záznamov a nejak sa v tom vyznať. Keď máš štatistiku, tak použiješ len nejaký priemer alebo miery variability a už ich vieš dostatočne dobre porovnať a toho lepšieho poslať na olympiádu.<br /><br />
 
