--- a/pages/stat_usage.html
+++ b/pages/stat_usage.html
@@ -1,6 +1,6 @@
 ---
 title: Naozajstné využitie štatistiky
-description: "naozajstné využitie štatistiky"
+description: "Príklady naozajstného využitia štatistiky, ktoré prinášajú zaujímavé informácie z rôznych končín sveta. Odpovedá na otázky, kde žijú najvyšší ľudia alebo ako sa stravujeme."
 keywords: "využitie štatistiky"
 permalink: naozajstne_vyuzitie_statistiky
 ---
