--- a/pages/vocabulary.html
+++ b/pages/vocabulary.html
@@ -1,8 +1,9 @@
 ---
 title: Matematicko-slovenský slovník
-description: "vysvetlenie matematických výrazov"
+description: "Vysvetlenie rôznych podivuhodných slovíčok, výrazov a znakov, ktoré sa vyskytujú v matematike."
 keywords: "slovník, matematické slová"
 permalink: matematicko-slovensky_slovnik
+mathjax: true
 ---
 
 <div class='content'>
@@ -92,7 +93,7 @@ permalink: matematicko-slovensky_slovnik
 <div class='vocabLetter'>S</div>
 
 <div class='vocabEntry'>
-<b>Skalár</b> <div>Skalár je veličina zapísaná iba jedným číslom (nie vektorom). Slovo pochádza z latinského "scalaris". Preklad toho latinského slova má niečo spoločné  s rebríkom, týkajúce sa rebríka. Objavilo sa v roku 1650. Pre reálne čísla ho začal používať matematik Hamilton v roku 1846. Prečo pomenoval reálne čísla týmto slovom, vie asi len on sám.</div>
+<b>Skalár</b> <div>Skalár je veličina zapísaná iba jedným číslom (nie vektorom). Slovo pochádza z latinského "scalaris". Preklad toho latinského slova má niečo spoločné s rebríkom, týkajúce sa rebríka. Objavilo sa v roku 1650. Pre reálne čísla ho začal používať matematik Hamilton v roku 1846. Prečo pomenoval reálne čísla týmto slovom, vie asi len on sám.</div>
 </div><br />
 
 <div class='vocabEntry'>
