--- a/pages/aGeom_coorSys.html
+++ b/pages/aGeom_coorSys.html
@@ -1,6 +1,6 @@
 ---
 title: Súradnicová sústava
-description: "analytická geometria súradnicová sústava"
+description: "Súradnicová sústava nám umožňuje opísať polohu bodov v priestore. Najznámejší je Kartezianska Súradnicová sústava. Používa sa s ľubovoľným počtom rozmerov."
 keywords: "karteziánsky súradnicový systém, bod, súradnica, os"
 permalink: analyticka_geometria_suradnicova_sustava
 ---
@@ -9,10 +9,10 @@ permalink: analyticka_geometria_suradnicova_sustava
 
 <h1>Súradnicová sústava</h1>
 
-Sústavu súradníc ani slovami opísať nevieme, tak hneď začneme obrázkom.
+Súradnicový systém nám umožňuje opísať polohu bodov v priestore.
 
 <figure>
-  <img src="../assets/images/aGeom_coorSystem.png" alt="Karteziánska súradnicová sústava">
+  <img src="assets/images/aGeom_coorSystem.png" alt="Karteziánska súradnicová sústava">
   <figcaption>Obr. 1.: Karteziánska súradnicová sústava. Hore je pre trojrozmerný priestor a dolu pre dvojrozmerný priestor.</figcaption>
 </figure>
 
@@ -24,7 +24,7 @@ To, čo je na obrázku sa nazýva <b>Karteziánska súradnicová sústava</b>. J
 V súradnicovej sústave vieme zobraziť body. <b>Každý bod má presné súradnice</b>, kde sa v danom priestore nachádza. Súradnice zapisujeme do hranatých zátvoriek. Najprv sa zapíše súradnica na osi <i>x</i>, potom na osi <i>y</i> a ak je, tak nakoniec na osi <i>z</i>. Body označujeme veľkými písmenami.
 
 <figure>
-  <img src="../assets/images/aGeom_coorSystemsPoint.png" alt="Bod v karteziánskej sústave súradníc">
+  <img loading="lazy" src="assets/images/aGeom_coorSystemsPoint.png" alt="Bod v karteziánskej sústave súradníc">
   <figcaption>Obr. 2.: Súradnice bodu sa značia ako <i>A[x,y,z]</i>. Bod <i>B</i> je iba v dvojrozmernom priestore, tak súradnica <i>z</i> mu chýba.</figcaption>
 </figure>
 
