--- a/pages/aGeom_space.html
+++ b/pages/aGeom_space.html
@@ -1,6 +1,6 @@
 ---
 title: Priestor
-description: "priestor"
+description: "Analytická geometria pracuje s rôznymi objektami, ktoré sú v nejakom priestore. Priestor, v ktorom žijeme je trojrozmerný. Dvojrozmerný priestor je napríklad svet na obrazovke. Jednorozmerný priestor by bol na primake a nularozmerný je bod. Priestor môže mať samozrejme aj viac rozmerov alebo dokonca môže mať záporné či desatinné rozmery."
 keywords: "priestor, dimenzia, 3D, 2D, 1D, 0D"
 permalink: priestor
 ---
@@ -12,7 +12,7 @@ permalink: priestor
 Analytická geometria, rovnako ako normálna geometria pracuje s rôznymi objektmi, ktoré sú v nejakom priestore. My žijeme v trojrozmernom priestore. Máme šírku, hĺbku a výšku. Okrem nášho trojrozmerného priestoru si vieme predstaviť dvojrozmerný, jednorozmerný a nula rozmerný priestor. Dvojrozmerný priestor má iba šírku a výšku, nemá hĺbku. Môžeš si to predstaviť tak, že si na papier nakreslíš svoj vlastný svet. Ľudia v ňom sa budú môcť hýbať iba doprava, doľava, hore a dole. Dozadu a dopredu nebudú môcť ísť. Jednorozmerný priestor je iba priamka. Na nej by vymyslený ľudia mali iba šírku, výšku už nie. Mohli by sa hýbať iba doprava a doľava. Nula rozmerný priestor je iba bod, nemá ani šírku, ani hĺbku, ani výšku. Ľudia v ňom by sa nemohli hýbať nikam.
 
 <figure>
-  <img src="../assets/images/aGeom_dimensions.png" alt="3D, 2D, 1D a 0D priestor">
+  <img src="assets/images/aGeom_dimensions.png" alt="3D, 2D, 1D a 0D priestor">
   <figcaption>Obr. 1.: Tu je pokus ukázať ti rôzne priestory. 3D priestor je náš svet. Má hĺbku, šírku a výšku. 2D priestor je plocha. Má šírku a výšku. 1D priestor je priamka. Má iba šírku. 0D priestor je bod. Nemá žiadny rozmer.</figcaption>
 </figure>
 
