--- a/pages/aGeom_todayCG2020.html
+++ b/pages/aGeom_todayCG2020.html
@@ -1,8 +1,9 @@
 ---
 title: Počítačová grafika dnes
-description: "počítačová grafika dnes"
+description: "Dnes rieši počítačová grafika problémy ako hodnoverné osvetlenie priestoru, simulácia vody a iných tekutín. Simulácia, textilu či srsti. So všetkýcm jej pomáha analytická geometria. "
 keywords: "pocitacova grafika, pong, plyn, tekutina, Navier-Stoke rovnica, textil, vlasy, svetlo"
 permalink: pocitacova_grafika_dnes
+mathjax: true
 ---
 <div class="content">
 
@@ -12,7 +13,7 @@ permalink: pocitacova_grafika_dnes
 Pingpong patril medzi prvé počítačové hry. Svetlo sveta uzrel v roku 1972 (relatívne nedávno, nie?). Grafika hry bola naozaj jednoduchá. Ako rakety slúžili dve čiary. Sieťka bola dlhá čiara v strede. Hráči ovládali rakety a odrážali si malý štvorček-loptičku. Na vrchu obrazovky bolo počítadlo bodov. Oficiálny názov hry je Pong. [1]
 
 <figure>
-  <img src="../assets/images/aGeomGifs/aGeom_CGtodayPong.gif" alt="Prvá počítačová hra - Pong">
+  <img src="assets/images/aGeomGifs/aGeom_CGtodayPong.gif" alt="Prvá počítačová hra - Pong">
   <figcaption>Obr. 1.: Prvá počítačová hra - Pong <a href="https://www.youtube.com/watch?v=XNRx5hc4gYc&ab_channel=pongmuseum" target="_blank">[2]</a></figcaption>
 </figure>
 
@@ -31,25 +32,25 @@ Táto kategória je čo do výpočtov aj do práce z tých ľahších. Tuhé/pev
 Prácu s nimi sme si predviedli aj v článkoch o analytickej geometrii. Grafik spraví v programe nejaký objekt. Ten sa skladá z veľmi veľa trojuholníčkov. Ukázali sme si aj vykresľovanie týchto objektov, tzv. raytracing.
 
 <figure>
-  <img src="../assets/images/aGeom_CGtodayRigidbodies.jpg" alt="Pevné telesá">
+  <img loading="lazy" src="assets/images/aGeom_CGtodayRigidbodies.jpg" alt="Pevné telesá">
   <figcaption>Obr. 2.[15]: Pevné telesá sú také, ktoré majú stále svoj rovnaký tvar. Môžu to byť napríklad domy, autá, nábytok ale aj ľudia či stromy.</figcaption>
 </figure>
 
 <h2>Plyny a tekutiny</h2>
-Oheň, voda, dym, prach. To všetko sú veci, ktoré dokážu vo filmoch spraviť úžasné efekty. Netreba ich natáčať vždy len naživo. Dajú sa spraviť aj na počítači. 
+Oheň, voda, dym, prach. To všetko sú veci, ktoré dokážu vo filmoch spraviť úžasné efekty. Netreba ich natáčať vždy len naživo. Dajú sa spraviť aj na počítači.
 
 <figure>
-  <img src="../assets/images/aGeomGifs/aGeom_CGtodayFire.gif" alt="SIGGRAPH 2011: oheň">
+  <img loading="lazy" src="assets/images/aGeomGifs/aGeom_CGtodayFire.gif" alt="SIGGRAPH 2011: oheň">
   <figcaption>Obr. 3.: SIGGRAPH 2011: oheň <a href="https://www.youtube.com/watch?v=hZC6ORUbLog&ab_channel=DougJames" target="_blank">[8]</a></figcaption>
 </figure>
 
 <figure>
-  <img src="../assets/images/aGeomGifs/aGeom_CGtodayWater.gif" alt="SIGGRAPH 2020: voda">
+  <img loading="lazy" src="assets/images/aGeomGifs/aGeom_CGtodayWater.gif" alt="SIGGRAPH 2020: voda">
   <figcaption>Obr. 4.: SIGGRAPH 2020: voda <a href="https://www.youtube.com/watch?v=Au3A7YUOol8&t=278s&ab_channel=ChenfanfuJiang" target="_blank">[7]</a></figcaption>
 </figure>
 
 <figure>
-  <img src="../assets/images/aGeomGifs/aGeom_CGtodaySmoke.gif" alt="SIGGRAPH 2020: dym">
+  <img loading="lazy" src="assets/images/aGeomGifs/aGeom_CGtodaySmoke.gif" alt="SIGGRAPH 2020: dym">
   <figcaption>Obr. 5: SIGGRAPH 2020: dym <a href="https://www.youtube.com/watch?v=Qi8pDl7jMd0&t=127s&ab_channel=ZahraForootaninia" target="_blank">[9]</a></figcaption>
 </figure>
 
@@ -65,14 +66,14 @@ Textil zasa nemôžeme obaliť trojuholníčkami. Chceme, aby sa hýbal. Chceme,
 Textílie vieme zobraziť tromi spôsobmi. Prvý je geometrický. Je to najjednoduchší spôsob a používal sa už dávno. Je rovnaký ako pevné telesá. Látku vymodeluje grafik v nejakom programe. Lenže takáto handrička je ako pevné teleso. Nemá žiadne fyzikálne vlastnosti textilu a nevie sa nijako hýbať, krčiť, viať. Iba stojí. Druhý spôsob je fyzikálny. Vedci sa pozrú na vlastnosti materiálu (napr. ako sa dá natiahnuť, či je tenký, hrubý, dá sa ľahko ohnúť alebo je to naškrobená košeľa). Podobne ako Navier so Stokom, spravia nejaké rovnice. Tie sa potom použijú na to, aby sa vedelo, ako sa má textil správať. Fyzikálny spôsob je veľmi náročný na výpočty a dlho trvá, kým sa napríklad správne nasimuluje celý pád uteráku na zem. Preto sa niekedy používa hybridný model. Tam grafici spravia nejaké základné tvary uteráka a zvyšok sa dopočíta. [3]
 
 <figure>
-  <img src="../assets/images/aGeomGifs/aGeom_CGtodayTextile.gif" alt="SIGGRAPH 2017:">
+  <img loading="lazy" src="assets/images/aGeomGifs/aGeom_CGtodayTextile.gif" alt="SIGGRAPH 2017:">
   <figcaption>Obr. 6: SIGGRAPH 2017: textil <a href="https://www.youtube.com/watch?v=eGtB0VXJsuI&t=27s&ab_channel=ChenfanfuJiang" target="_blank">[12]</a></figcaption>
 </figure>
 
 Oblečenie sa snažili nasimulovať aj v roku 2021 <a href="https://www.youtube.com/watch?v=vn-WzWm74Pc&t=108s&ab_channel=VisualComputing%40ISTAustria" target="_blank">[10]</a>. Panáčik, ktorý sa hýbe, má na sebe oblečené tričká z rôznych materiálov. Tričká sa vlnia a krčia podľa jeho pohybu. V roku 2018 skúmali mokrú textíliu <a href="https://www.youtube.com/watch?v=xvyGpBKevLM&t=24s&ab_channel=RaymondYunFei" target="_blank">[11]</a>. Chceli vedieť, čo sa s látkou deje, keď je namočená alebo ako vyzerá v okamihu, keď sa na ňu vyleje voda.
 
 <!--figure>
-  <img src="../assets/images/aGeom_CGtodayTextile.png" alt="Textil">
+  <img loading="lazy" src="assets/images/aGeom_CGtodayTextile.png" alt="Textil">
   <figcaption>Obr. 4.: Textil na SIGGRAPH-e. Tričko z roku 2021 , mokrý uterák z roku 2018 <a href="https://www.youtube.com/watch?v=xvyGpBKevLM&t=24s&ab_channel=RaymondYunFei" target="_blank">[11]</a> a utierky z roku 2017 <a href="https://www.youtube.com/watch?v=eGtB0VXJsuI&t=27s&ab_channel=ChenfanfuJiang" target="_blank">[12]</a>.</figcaption>
 </figure-->
 
@@ -86,7 +87,7 @@ S týmito požiadavkami zasa pomôže matematika. Niektorí ľudia sa pozerali n
 Aj štúdio Pixar sa zaoberalo vlasmi, keď chcelo spraviť pekné filmy. Vo filme Brave má hlavná hrdinka krásne, ryšavé a hlavne kučeravé vlasy. Nad tým, ako spraviť kučeravé vlasy si lámali hlavy dlho. Nakoniec zistili, že kučeravý vlas sa správa ako pružina a tak do rovnice pre vlas vložili rovnicu pružiny. Výsledok sa im celkom podaril, čo povieš? [6]
 
 <figure>
-  <img src="../assets/images/aGeomGifs/aGeom_CGtodayHair.gif" alt="Kučeravé vlasy">
+  <img loading="lazy" src="assets/images/aGeomGifs/aGeom_CGtodayHair.gif" alt="Kučeravé vlasy">
   <figcaption>Obr. 7.<a href="https://www.youtube.com/watch?v=YeYW8TIWLG8&ab_channel=KhanAcademyLabs" target="_blank">[13]</a>: Kučeravé vlasy potrápili aj tvorcov animovaných filmov.</figcaption>
 </figure>
 
@@ -100,7 +101,7 @@ Najprv nám však treba vedieť, ako funguje naozajstné svetlo. Svetlo pochádz
 Počítačová grafika tiež skúša napodobniť odrážanie lúčov. Zo slnka príde ohromne veľa lúčov a len malé percento z nich zachytia naše oči. Je hlúposť sledovať každý lúč a pozerať, ako sa odráža. Raytracing to robí naopak. Pre každý pixel budúceho obrázku vyšle lúč, ktorý vychádza z kamery, prechádza cez daný pixel, poodráža sa od objektov v scéne a z každého objektu, ktorý stretol, zoberie kúsok farby. Takto dostaneme iba toľko lúčov koľko potrebujeme. Lúč narazí do prvého objektu. Zapamätá si jeho farbu, potom sa odrazí do ďalšieho objektu a z tohto objektu pripočíta kúsok farby. Lúč sa môže odraziť niekoľkokrát. Lúč sa odráža podľa zákonu uhla odrazu, čiže podľa toho, ako to funguje v prírode. Ak chceme zistiť, či sa objekt nachádza na svetle alebo v tieni, zoberieme si vektor, ktorý ukazuje z objektu do slnka a tým smerom vyšleme ďalší lúč. Ak lúč na svojej ceste za slnkom stretne iný objekt, znamená to, že náš objekt je v tieni. Vtedy farbu trošku stmavíme.
 
 <figure>
-  <img src="../assets/images/aGeomGifs/aGeom_CGtodayLight.gif" alt="Raytracing">
+  <img loading="lazy" src="assets/images/aGeomGifs/aGeom_CGtodayLight.gif" alt="Raytracing">
   <figcaption>Obr. 8.: Osvetlenie pomocou raytracingu. Dokáže na predmetoch vytvoriť odrazy okolia. No je to výpočtovo zložité aj v dnešnej dobe. <a href="https://www.youtube.com/watch?v=AiliuDkVJRs&t=19s&ab_channel=NVIDIADeveloper" target="_blank">[14]</a></figcaption>
 </figure>
 
