--- a/pages/geom_line.html
+++ b/pages/geom_line.html
@@ -1,6 +1,6 @@
 ---
 title: Priamka
-description: "priamka"
+description: "Priamka je dlhá rovná čiara idúca od nekonečna do nekonečna. Nemá začiatok ani koniec. Euklides ju zadefinoval pomocou dvoch bodov. Teda cez nejaké dva body môže ísť práve iba jedna priamka."
 keywords: "priamka, vzájomná poloha priamok"
 permalink: priamka
 ---
@@ -16,7 +16,7 @@ Každé dva body, ktoré si vyberieme, sa dajú spojiť jednou priamkou. Je to n
 <h2>Vzájomná poloha priamok</h2>
 Priamky môžu byť <b>rovnobežné, rôznobežné a totožné</b>. Rovnobežné priamky sa nikde nepretnú. Z toho vyplýva, že nemajú žiaden bod spoločný. Rôznobežné priamky idú každá iným smerom a niekde sa pretnú v jednom bode. Majú teda spoločný iba jeden bod. Totožné priamky ležia na sebe a kvôli tomu majú všetky body spoločné.
 <figure>
-  <img src="../assets/images/geom_lineParallelism.png" alt="Optická ilúzia Cafe wall">
+  <img src="assets/images/geom_lineParallelism.png" alt="Optická ilúzia Cafe wall">
   <figcaption>Obr. 1.: Rovnobežnosť priamok. Na prvom obrázku <i>a)</i> sú rovnobežné priamky. Ani jeden bod nemajú spoločný. Na obrázku <i>b)</i> sú všetky štyri priamky rôznobežné. U nás na papieri sa síce nepretínajú, ale keďže sú nekonečne dlhé, tak sa niekde pretnú určite. Totožné priamky sú na obrázku <i>c)</i>. Majú všetky body rovnaké.</figcaption>
 </figure>
 
@@ -24,37 +24,37 @@ Priamky môžu byť <b>rovnobežné, rôznobežné a totožné</b>. Rovnobežné
 Priamky vieme použiť na rôzne skvelé veci a jednou z nich sú určite optické ilúzie.
 <div id="opticalIllusionImages">
 <figure>
-  <img src="../assets/images/opticalIllusion/CafeWall.png" alt="Optická ilúzia Cafe wall">
+  <img loading="lazy" src="assets/images/opticalIllusion/CafeWall.png" alt="Optická ilúzia Cafe wall">
   <figcaption>Obr. 2.: Cafe Wall[1]: aj tebe sa zdá, že tie vodorovné čiary sú krivé?</figcaption>
 </figure>
 
 <figure>
-  <img src="../assets/images/opticalIllusion/Ehrenstein.png" alt="Ehrensteinova optická ilúzia Ehrenstein">
+  <img loading="lazy" src="assets/images/opticalIllusion/Ehrenstein.png" alt="Ehrensteinova optická ilúzia Ehrenstein">
   <figcaption>Obr. 3.: Ehrensteinova ilúzia[1]: vidíš tam tie biele kruhy, že? </figcaption>
 </figure>
 
 <figure>
-  <img src="../assets/images/opticalIllusion/Hering.png" alt="Heringova optická ilúzia">
+  <img loading="lazy" src="assets/images/opticalIllusion/Hering.png" alt="Heringova optická ilúzia">
   <figcaption>Obr. 4.: Heringova ilúzia[1]: tie červené čiary sú krivé, či nie?</figcaption>
 </figure>
 
 <figure>
-  <img src="../assets/images/opticalIllusion/HermannGrid.png" alt="Optická ilúzia Hermannova mriežka">
+  <img loading="lazy" src="assets/images/opticalIllusion/HermannGrid.png" alt="Optická ilúzia Hermannova mriežka">
   <figcaption>Obr. 5.: Hermannova mriežka[1]: sú šedé štvorčeky na miestach, kde sa pretínajú biele čiary?</figcaption>
 </figure>
 
 <figure>
-  <img src="../assets/images/opticalIllusion/Muller-Lyer.png" alt="Optická ilúzia Muller-Lyer">
+  <img loading="lazy" src="assets/images/opticalIllusion/Muller-Lyer.png" alt="Optická ilúzia Muller-Lyer">
   <figcaption>Obr. 6.:Muller-Lyer ilúzia[1]: ktorá z týchto čiar je najdlhšia? Tá stredná? Určite? </figcaption>
 </figure>
 
 <figure>
-  <img src="../assets/images/opticalIllusion/Wundt.png" alt="Wundtova optická ilúzia">
+  <img loading="lazy" src="assets/images/opticalIllusion/Wundt.png" alt="Wundtova optická ilúzia">
   <figcaption>Obr. 7.: Wundtova ilúzia[1]: sú červené čiary opäť krivé?</figcaption>
 </figure>
 
 <figure>
-  <img src="../assets/images/opticalIllusion/Zollner.png" alt="Zollnerova optická ilúzia">
+  <img loading="lazy" src="assets/images/opticalIllusion/Zollner.png" alt="Zollnerova optická ilúzia">
   <figcaption>Obr. 8.: Zollnerova ilúzia[1]: sú tie dlhé čierne čiary rovnobežné?</figcaption>
 </figure>
 
