--- a/pages/gonio_birth.html
+++ b/pages/gonio_birth.html
@@ -1,6 +1,6 @@
 ---
 title: Ako vznikla goniometria
-description: "ako vznikla goniometria"
+description: "Goniometria sa zaoberá pomermi strán v pravouhlom trojuholníku. Tento obor matematiky dostal názov z gréckych slov gonio a metria, čo znamená meranie uhlov. Jej počiatky siahajú až do starovekého Egypta."
 keywords: "goniometria, sínus, kosínus, tangens, kotangens, sekans, kosekans, pomery strán, pravouhlý trojuholník"
 permalink: ako_vznikla_goniometria
 ---
@@ -10,23 +10,23 @@ permalink: ako_vznikla_goniometria
 <h1>Ako vznikla goniometria</h1>
 Goniometria taká, ako ju poznáme dnes sa vyvíjala zhruba tri tisícročia. Opísať to všetko, by bolo nadlho. Preto si radšej históriu trošičku upravíme a celý vývoj scvrkneme. Na pochopenie to stačí.<br /><br />
 
-Upravená história začína. Náš príbeh bude začínať jedného pekného dňa, dajme tomu, v strednej ríše v Egypte (to je vtedy, keď stavali pyramídy). V ten letný deň bolo neobyčajne krásne počasie.  Slnko svietilo, ale vzduch bol stále svieži. Od mora pofukoval jemný vánok a ani kobylky neotravovali tak, ako zvyčajne. Tunajší slávny architekt Raachef sa opaľoval na dvore. Príjemné popoludnie mu pokazil posol od faraóna. <b>Chceli po ňom, aby panovníkovi postavil parádnu hrobku.</b> Mala to byť najvyššia pyramída v celej egyptskej ríší. Sľúbili mu, že ak sa to podarí, vyvážia ho zlatom. Keď sa nepodarí, dajú ho zožrať krokodílom. Vďaka skvelej motivácií sa Raachef ihneď pustil s chuťou do práce.<br /><br />
+Upravená história začína. Náš príbeh bude začínať jedného pekného dňa, dajme tomu, v strednej ríše v Egypte (to je vtedy, keď stavali pyramídy). V ten letný deň bolo neobyčajne krásne počasie. Slnko svietilo, ale vzduch bol stále svieži. Od mora pofukoval jemný vánok a ani kobylky neotravovali tak, ako zvyčajne. Tunajší slávny architekt Raachef sa opaľoval na dvore. Príjemné popoludnie mu pokazil posol od faraóna. <b>Chceli po ňom, aby panovníkovi postavil parádnu hrobku.</b> Mala to byť najvyššia pyramída v celej egyptskej ríší. Sľúbili mu, že ak sa to podarí, vyvážia ho zlatom. Keď sa nepodarí, dajú ho zožrať krokodílom. Vďaka skvelej motivácií sa Raachef ihneď pustil s chuťou do práce.<br /><br />
 
 Na začiatku ho čakala ohromne ťažká úloha, ale spomienka na krokodílov ho presvedčila, že netreba dlho otáľať. <b>Bolo treba zistiť, ktorá pyramída je najvyššia</b> a potom spočítať rozmery novej pyramídy. Zapálil si oheň, spravil si kávu a pustil sa do práce.<br /><br />
 
 Raachef dlhými krokmi premeriaval svoju nádhernú vilu pri Níle. Popri odháňaní komárov sa pokúšal prísť na to, ako zistí, koľko meria najvyššia pyramída. Nemohol si dovoliť postaviť nižšiu.<br /><br />
 
-Že by ju odmeral? Ale ako, keď nevedel lietať? Nuž, musel si pomôcť inak. <b>Jediné, čo mohol odmerať zo zeme bola šírka pyramídy a uhol, ktorý zvierala so zemou.</b> 
+Že by ju odmeral? Ale ako, keď nevedel lietať? Nuž, musel si pomôcť inak. <b>Jediné, čo mohol odmerať zo zeme bola šírka pyramídy a uhol, ktorý zvierala so zemou.</b>
 
 <figure>
-  <img src="../assets/images/gonio_pyramids.png" alt="Na pyramíde sa dá zmerať jej šírka, dĺžka a uhol, ktorý zviera so zemou.">
+  <img src="assets/images/gonio_pyramids.png" alt="Na pyramíde sa dá zmerať jej šírka, dĺžka a uhol, ktorý zviera so zemou.">
   <figcaption>Obr. 1.: Raachef potreboval odmerať výšku pyramídy, ale zo zeme dokázal zmerať len šírku pyramídy a uhol ktorý zviera so zemou.</figcaption>
 </figure>
 
 Všimol si, že mu tam vzniká pravouhlý trojuholník. Vidíš ho aj ty? Pozri na obrázok hore. Dole nepozeraj, tam je riešenie.
 
 <figure>
-  <img src="../assets/images/gonio_pyramidsTriangle.png" alt="Treba dopočítať výšku pyramídy.">
+  <img loading="lazy" src="assets/images/gonio_pyramidsTriangle.png" alt="Treba dopočítať výšku pyramídy.">
   <figcaption>Obr. 2.: Raachef dostal pravouhlý trojuholník, ale stále poznal len jednu stranu a jeden uhol.</figcaption>
 </figure>
 
@@ -39,14 +39,14 @@ Raachef dostával strach, že sa skôr stane dobrou večerou, ako dobrým archit
 UPOZORNENIE: NA OBRÁZKOCH 3 A 4 SME DĹŽKY STRÁN ZAOKRÚHĽOVALI NA DVE DESATINNÉ MIESTA, TAKŽE KEĎ SI TO BUDEŠ CHCIEŤ PREPOČÍTAŤ, NEMUSÍ TI TO VYJSŤ PRESNE TAK, AKO NÁM.
 
 <figure>
-  <img src="../assets/images/gonio_triangleRatios.png" alt="Pomery strán v pravouhlom trojuholníku.">
+  <img loading="lazy" src="assets/images/gonio_triangleRatios.png" alt="Pomery strán v pravouhlom trojuholníku.">
   <figcaption>Obr. 3.: Tu sú dva trojuholníky. Každý z nich má inú veľkosť strán, ale uhly majú rovnaké. Vyrátali sme všetkých 6 pomerov strán a ako si môžeš všimnúť, pre oba trojuholníky sú rovnaké.</figcaption>
 </figure>
 
 Chcel si to overiť. Začal kresliť aj iné trojuholníky. Zasa. <b>Všetky trojuholníky s rovnakými uhlami mali pomery strán stále rovnaké, či boli malé alebo veľké.</b> Naše staré mamy hovoria, že je lepšia raz skúsiť, ako sto-krát vidieť, tak tu je niekoľko trojuholníkov a prepočítaj si ich pomery strán, aby si to zažil na vlastnej koži.
 
 <figure>
-  <img src="../assets/images/gonio_differentTrianglesRatio.png" alt="Pomery strán na prepočítanie">
+  <img loading="lazy" src="assets/images/gonio_differentTrianglesRatio.png" alt="Pomery strán na prepočítanie">
   <figcaption>Obr. 4.: Skús si prepočítať pomery strán zopár trojuholníkov. Uvidíš, že tie, čo majú rovnaký uhol, budú mať aj rovnaké pomery strán.</figcaption>
 </figure>
 
@@ -55,14 +55,14 @@ Nuž naozaj. Pravouhlé trojuholníky s rovnakými uhlami mali vždy rovnaký po
 To mu pomohlo. <b>Keď pre uhol vedel, aký je pomer strán, mohol si dovoliť jednu stranu nevedieť. Dopočítal ju z jednoduchej rovnice.</b> Predstava krokodílov sa vzdialila. Poznal niektoré uhly a poznal niektoré strany. Zvyšok už dopočítať vedel. Zvládol by si prísť na rovnicu aj ty alebo by ťa zožral krokodíl? Skús sa trochu zamyslieť ;). Na obrázku dolu je riešenie.
 
 <figure>
-  <img src="../assets/images/gonio_ratioEquation.png" alt="Pomery strán - rovnica">
+  <img loading="lazy" src="assets/images/gonio_ratioEquation.png" alt="Pomery strán - rovnica">
   <figcaption>Obr. 5.: Rovnica, z ktorej vieme dopočítať jednu zo strán, ak poznáme pomer strán pre daný uhol.</figcaption>
 </figure>
 
 Raachef vedel, že sa o jeho objave bude učiť v školách, tak chcel narobiť deťom trochu problémov. Pomery nazval čudnými menami: <b> sínus, kosínus, tangens, kotangens, sekans a kosekans </b>. Takže ak nabudúce nebudeš vedieť, čo tieto slová znamenajú, <b>sú to jednoducho pomery strán v pravouhlom trojuholníku</b>.
 
 <figure>
-  <img src="../assets/images/gonio_functionNames.png" alt="Názvy pomerov strán - goniometrické funkcie">
+  <img loading="lazy" src="assets/images/gonio_functionNames.png" alt="Názvy pomerov strán - goniometrické funkcie">
   <figcaption>Obr. 6.: Názvy a označenia pomerov strán: <b>sin - sínus, cos - kosínus, tan - tangens, cotg - kotangens, sec - sekans, csc - kosekans</b> </figcaption>
 </figure>
 
@@ -70,7 +70,7 @@ Po objavení tejto úžasne myšlienky, Raachef už ľahko dopočítal výšku p
 
 
 <figure>
-  <img src="../assets/images/gonio_pyramidsTriangleExample.png" alt="Počítanie výšky pyramídy">
+  <img loading="lazy" src="assets/images/gonio_pyramidsTriangleExample.png" alt="Počítanie výšky pyramídy">
   <figcaption>Obr. 7.: Výška najvyššej pyramídy v Egypte je 146 metrov. Môžeš si overiť na nete.</figcaption>
 </figure>
 
