--- a/pages/stat_PositionMeasures.html
+++ b/pages/stat_PositionMeasures.html
@@ -1,8 +1,9 @@
 ---
 title: Miery polohy
-description: "miery polohy"
+description: "Miery polohy hovoria o polohe údajov na číselnej osi. Sú to čísla, ktoré vhodne reprezentujú údaje. K mieram polohy patrí modus, kvantily a stredná hodnota. Stredná hodnota môže byť buď medián alebo priemer."
 keywords: "priemer, modus, medián, kvantil"
 permalink: miery_polohy
+mathjax: true
 ---
 
 <div class="content">
@@ -20,7 +21,7 @@ Priemer snáď poznáš zo základnej školy, takže vysvetlením by sme ťa moh
 
 Používame ho vtedy, keď chceme vedieť v akých číslach sa pohybujú údaje. Keď máme údaje o cenách bytov, tak priemer bude napríklad 90 000 eur a my vieme, že ceny bytov sa pohybujú v desiatkach tisíc eur. Keď máme údaje o cenách potravín, tak priemer bude napríklad 4 eurá a vďaka tomu vieme, že za potraviny platíme pár eur. Pomocou priemeru vieme porovnať dáta o rovnakých veciach. Napríklad pomocou priemeru môžeme porovnať ceny bytov v Bratislave, Kysuckom Novom Meste a v Prešove. Nemôžeme však už porovnávať rôzne veci. Ceny rožkov s cenami bytov by sme porovnali ťažko. Tiež aj priemerné ceny bytov s priemernou teplotou v januári by sa porovnať nedali.<br /><br />
 
-Matematika by nebola matematikou, keby aj na výpočet priemeru neexistoval nejaký všeobecný zápis. Je to tento peknučký vzorček: 
+Matematika by nebola matematikou, keby aj na výpočet priemeru neexistoval nejaký všeobecný zápis. Je to tento peknučký vzorček:
 $$ \overline{x}=\frac{1}{n}\sum_{i=1}^n x_{i} $$
 
 Písmeno <i>x</i> označuje dáta. Pre nás je to <i>overall</i> hráčov. $\overline{x}$ označuje priemer z dát. Konkrétne priemer značí tá palička nad x-kom. Takže odteraz keď budeš vidieť paličku nad nejakým písmenom, budeš vedieť, že je to priemer. Ďalej tam je $\frac{1}{n}$. Písmeno <i>n</i> označuje počet dát, z ktorých sa ráta priemer. Možno si si už za svojho pôsobenia vo vzdelávacom systéme všimol, že keď násobíš zlomkom $\frac{1}{n}$, tak vlastne delíš n-kom. Ďalej je tam $\sum_{i=1}^n x_{i}$. Tým spočítaš všetky dáta. Pre nás to znamená zrátanie <i>overall</i> hráčov. Ak nevieš ako funguje suma, je to vysvetlené <a href="matematicko-slovensky_slovnik#vocabSuma" target="_blank">tu</a>. Zhrnutie vzorca je také, že zrátaš všetky dáta a vydelíš ich ich počtom.<br /><br />
@@ -35,7 +36,7 @@ $$\frac{88+88+86+85+85+84+82+81+81+81+80}{11} = 83,73$$
 </div>
 
 <figure>
-  <img src="../assets/images/stat_Mean.png" alt="=Rátanie priemeru">
+  <img loading="lazy" src="assets/images/stat_Mean.png" alt="=Rátanie priemeru">
   <figcaption>Obr. 1.: Pri počítaní priemeru sa údaje zarovnajú.</figcaption>
 </figure>
 
@@ -51,7 +52,7 @@ Medián sa označuje podobne ako priemer, len miesto čiarky je vlnovka. Pre úd
 Pre Inter Milano je medián šiesty hráč. Je to Stefan de Vrij s <i>overallom</i> 84. Ak by sme napríklad niekde zapatrošili futbalistu Nicolò Barellu, tak by sme medián museli rátať z desiatich hráčov. Zobrali by sme si prostredných dvoch. Sú to Stefan de Vrij a Mauro Emanuel Icardi Rivero. Z ich <i>overallov</i> by sa vyrátal priemer: (84+85)/2 = 84,5. Medián by bol potom 84,5.
 
 <figure>
-  <img src="../assets/images/stat_Median.png" alt="=Rátanie mediánu">
+  <img loading="lazy" src="assets/images/stat_Median.png" alt="=Rátanie mediánu">
   <figcaption>Obr. 2.: Medián je prostredný z údajov. Keď je počet údajov párny, tak sa medián spraví ako priemer dvoch prostredných údajov.</figcaption>
 </figure>
 
@@ -87,16 +88,16 @@ Počítanie pozície iba z počtu hráčov N a nie z N+1, vždy vráti výsledok
 Teórie bolo zatiaľ dosť, poďme na príklad. Chceme si rozdeliť hráčov Interu Milano na tri časti podľa <i>overall</i>.
 
 <figure>
-  <img src="../assets/images/stat_QuantileOddData.png" alt="Rátanie kvantilov, keď kvantil vyjde presne na pozícií">
+  <img loading="lazy" src="assets/images/stat_QuantileOddData.png" alt="Rátanie kvantilov, keď kvantil vyjde presne na pozícií">
   <figcaption>Obr. 3.: Tu sú kvantily pre <i>overall</i> hráčov Interu Milano.</figcaption>
 </figure>
 
 Hráčov chceme deliť na tri časti, teda počet častí <i>q</i> bude 3. Kvantily budú dva (vždy keď niečo delíš na časti, tak hraníc medzi časťami je o jednu menej ako častí). Písmeno <i>k</i>, ktoré označuje poradie kvantilu bude nadobúdať hodnoty 1 a 2. Počet dát <i>N</i> bude v našom prípade 11. Pozíciu sme rátali pre dva kvantily. Prvý kvantil vyšiel na pozícií 4 a druhý na pozícií 8. Kvantily sú teda čísla 81 a 85.<br /><br />
 
-Keď sa ti stane taká vec, že kvantil nevyjde presná pozícia, ale nejaké  desatinné číslo, tak ho zaokrúhliš raz nadol a raz nahor. Zoberieš údaje z týchto dvoch pozícií a spravíš z nich priemer. Kvantil bude niekde medzi týmito dvomi číslami. V tomto príklade sme pridali dvanásty <i>overall</i>:
+Keď sa ti stane taká vec, že kvantil nevyjde presná pozícia, ale nejaké desatinné číslo, tak ho zaokrúhliš raz nadol a raz nahor. Zoberieš údaje z týchto dvoch pozícií a spravíš z nich priemer. Kvantil bude niekde medzi týmito dvomi číslami. V tomto príklade sme pridali dvanásty <i>overall</i>:
 
 <figure>
-  <img src="../assets/images/stat_QuantileEvenData.png" alt="Rátanie kvantilov, keď kvantil vyjde medzi pozíciami">
+  <img loading="lazy" src="assets/images/stat_QuantileEvenData.png" alt="Rátanie kvantilov, keď kvantil vyjde medzi pozíciami">
   <figcaption>Obr. 4.: Rátanie kvantilov, keď pozícia nevyjde presné číslo</figcaption>
 </figure>
 
@@ -104,7 +105,7 @@ Vráťme sa k motivovaniu hráčov. Futbalisti, ktorých <i>overall</i> je horš
 
 Ešte máme s kvantilmi jeden problém. Možno si si všimol, že ak by sme Inter Milano rozdelili na štyri časti, tak prvý kvantil by bol na treťom mieste. Tam je hodnota 81. Ale aj na druhom a štvrtom mieste je hodnota 81. Toto je ten problém. Keď ako kvantil určíme číslo 81, neplatí, že štvrtina hodnôt bude menšia alebo rovná ako 81. To, že kvantil nám vyjde jedna z rovnakých hodnôt, sa nevyskytuje našťastie veľmi často. Ak sa to už stane, býva to vtedy, keď je dát málo. To je aj náš prípad. Tento problém sa dá vyriešiť tak, že kvantil vyrátaš vzorcom, <b>ktorý používaš</b> a výsledok prehlásiš za správny, aj keď budú okolo kvantilu rovnaké hodnoty. (Chceli by sme upozorniť na dve slová "<b>ktorý používaš</b>", pretože kvantil sa dá vypočítať viacerými spôsobmi.) My by sme teda povedali, že 25%-tný kvantil je 81. [1]<br /><br />
 
-Údaje môžeš deliť na hocikoľko častí chceš. Ľudia však najčastejšie rozdeľujú dáta iba na nejaké časti. Tieto rozdelenia dostali aj svoje názvy. Sú to: 
+Údaje môžeš deliť na hocikoľko častí chceš. Ľudia však najčastejšie rozdeľujú dáta iba na nejaké časti. Tieto rozdelenia dostali aj svoje názvy. Sú to:
 
 <ul>
 <li>Medián - delí dáta na dve časti</li>
@@ -124,7 +125,7 @@ Modus je najpočetnejšia hodnota z údajov. Spočítajú sa rovnaké údaje a t
 Pre Inter je hodnota 88 dva razy, 86 raz, 85 je dva razy, 84 a 82 sú po jednej, 81 je tri razy a 80 iba raz. Najviac je hodnoty 81, lebo sa vyskytuje v dátach tri razy. Modus je teda 81.
 
 <figure>
-  <img src="../assets/images/stat_Modus.png" alt="=Rátanie modusu">
+  <img loading="lazy" src="assets/images/stat_Modus.png" alt="=Rátanie modusu">
   <figcaption>Obr. 5.: Modus je hodnota, ktorá sa v údajoch vyskytuje najčastejšie.</figcaption>
 </figure>
 
