--- a/pages/stat_correlation.html
+++ b/pages/stat_correlation.html
@@ -1,18 +1,18 @@
 ---
 title: Korelácia
-description: "korelácia"
+description: "Korelácia hovorí o tom, či a ako veci medzi sebou súvisia. Na zmeranie veľkosti tohto vzťahu sa používa korelačný koeficient."
 keywords: "korelácia, korelačný koeficient"
 permalink: korelacia
+mathjax: true
 ---
 
 <div class="content">
 
 <h1>Korelácia</h1>
 
-Korelácia hovorí o tom, či a ako sú dáta od seba závislé. Vďaka korelácií by sme zistili, či spolu súvisí <i>overall</i> hráča a jeho cena. Možno by sme našli vzťah, že čím je hráč lepší, tým bude drahší. Koreláciu medzi výškou a vekom hráča by sme asi nenašli, pretože výška hráča nezávisí od jeho veku. Zápornú koreláciu by sme možno našli medzi atribútmi <i>gk_diving</i> a <i>skill_ball_control</i>. Prvý hovorí o tom, ako dobre sa brankár hádže za loptou a druhý o tom, ako dobre hráč vedie loptu. Môžeme predpokladať, že hráči, ktorí sa dobre hádžu po lopte sú brankári a vo vedení lopty sú slabší. Hráči v poli sa zasa budú biedne hádzať za loptou, ale vedednie lopty budú mať excelentné. Či sú tieto naše hypotézy pravdivé, sa dá overiť korelačným koeficientom. 
+Korelácia hovorí o tom, či a ako sú dáta od seba závislé. Vďaka korelácií by sme zistili, či spolu súvisí <i>overall</i> hráča a jeho cena. Možno by sme našli vzťah, že čím je hráč lepší, tým bude drahší. Koreláciu medzi výškou a vekom hráča by sme asi nenašli, pretože výška hráča nezávisí od jeho veku. Zápornú koreláciu by sme možno našli medzi atribútmi <i>gk_diving</i> a <i>skill_ball_control</i>. Prvý hovorí o tom, ako dobre sa brankár hádže za loptou a druhý o tom, ako dobre hráč vedie loptu. Môžeme predpokladať, že hráči, ktorí sa dobre hádžu po lopte sú brankári a vo vedení lopty sú slabší. Hráči v poli sa zasa budú biedne hádzať za loptou, ale vedednie lopty budú mať excelentné. Či sú tieto naše hypotézy pravdivé, sa dá overiť korelačným koeficientom.
 
 <h2>Korelačný koeficient</h2>
-
 
 Za svoj život si si určite všimol, že niektoré veci spolu súvisia. Napríklad, čím viac si odkladáš na účet, tým viac tam máš našetrené. Keď ideš autom, tak čím rýchlejšie ide, tým kratší čas mu trvá, kým príde na miesto (P.S. toto nie je výzva, aby si chodil 200. Choď radšej podľa predpisov, aby si niekde nenabúral). Podobných príkladov na štýl čím viac, tým viac alebo čím viac, tým menej nájdeš v živote veľa.<br /><br />
 
@@ -28,15 +28,13 @@ Korelačný koeficient:<br /><br />
 
 $$ r=\frac{k}{s_{x} \cdot s_{y}} $$
 
-Výsledkom korelačného koeficientu je nejaké číslo od -1 po 1. Výsledok určuje silu a druh závislosti. Keď je od -1 po 0, znamená, že údaje rastú každý opačne. Teda keď je x menšie, y je väčšie. Čím je číslo bližšie k -1, tým je závisloť silnejšia. Výsledok 0 znamená, že medzi údajmi nie je žiaden vzťah. Čísla okolo 0 hovoria o veľmi slabej závislosti. Keď ideme na opačnú stranu k 1, tak údaje rastú rovnako. Čím je  <i>x</i> väčšie, tým je aj <i>y</i> väčšie. Zasa platí, že čím bližšie je výsledok k 1, tým je závislosť silnejšia.<br /><br />
+Výsledkom korelačného koeficientu je nejaké číslo od -1 po 1. Výsledok určuje silu a druh závislosti. Keď je od -1 po 0, znamená, že údaje rastú každý opačne. Teda keď je x menšie, y je väčšie. Čím je číslo bližšie k -1, tým je závisloť silnejšia. Výsledok 0 znamená, že medzi údajmi nie je žiaden vzťah. Čísla okolo 0 hovoria o veľmi slabej závislosti. Keď ideme na opačnú stranu k 1, tak údaje rastú rovnako. Čím je <i>x</i> väčšie, tým je aj <i>y</i> väčšie. Zasa platí, že čím bližšie je výsledok k 1, tým je závislosť silnejšia.<br /><br />
 
 Teraz si ideme ukázať, ako takýto zázrak môže fungovať. <br /><br />
 
-
-
 Niektoré veci medzi sebou súvisia viac, niektoré menej a niektoré vôbec. Táto súvislosť sa dá vyjadriť matematikou.<br /><br />
 
-Začneme tým, že máme údaje o troch futbalistoch v tabuľke. Chceme vedieť ako súvisí overall s cenou hráča a gk_diving so skill_ball_control. Keď sa pozrieme na tie údaje, tak je vidno, že čím je väčší overall, tým je väčšia cena. S  gk_diving a skill_ball_control je to tak, že čím je jedno menšie, tým je druhé väčšie. Závislosť tam teda máme.<br /><br />
+Začneme tým, že máme údaje o troch futbalistoch v tabuľke. Chceme vedieť ako súvisí overall s cenou hráča a gk_diving so skill_ball_control. Keď sa pozrieme na tie údaje, tak je vidno, že čím je väčší overall, tým je väčšia cena. S gk_diving a skill_ball_control je to tak, že čím je jedno menšie, tým je druhé väčšie. Závislosť tam teda máme.<br /><br />
 
 <div class='overflowedItem'>
 <table class="center statTable">
@@ -75,7 +73,7 @@ Začneme tým, že máme údaje o troch futbalistoch v tabuľke. Chceme vedieť 
 </div>
 <br /><br />
 
-Závislosť sme zatiaľ merali dvomi slovami: menšie a väčšie. Teraz ich potrebujeme nejak vyjadriť matematikou. Chceme vedieť, či je údaj malý alebo veľký. Keď máme len údaj, nevieme o ňom povedať aký je. Ale keď ho s niečím porovnáme, tak už vieme povedať, či je oproti tomu veľký alebo malý. Údaj môžeme porovnať voči ostatným údajom. Nechceme ho však porovnávať s každým z údajov, lebo z takého porovnania by sme nič nemali. Potrebujeme nejakú vhodnú reprezentáciu týchto údajov a ako už tušíš, je to priemer. <br /><br />
+Závislosť sme zatiaľ merali dvomi slovami: menšie a väčšie. Teraz ich potrebujeme nejak vyjadriť matematikou. Chceme vedieť, či je údaj malý alebo veľký. Keď máme len údaj, nevieme o ňom povedať aký je. Ale keď ho s niečím porovnáme, tak už vieme povedať, či je oproti tomu veľký alebo malý. Údaj môžeme porovnať voči ostatným údajom. Nechceme ho však porovnávať s každým z údajov, lebo z takého porovnania by sme nič nemali. Potrebujeme nejakú vhodnú reprezentáciu týchto údajov a ako už tušíš, je to priemer.<br /><br />
 
 Priemery pre naše štyri atribúty sú takéto: overall=81, cena=43 166 666,67 gk_diving=50 a skill_ball_control=52,33.<br /><br />
 
@@ -160,9 +158,9 @@ Zase sme na tom o kúsok lepšie. Už vieme povedať aj vzťah medzi dvomi údaj
 </div>
 <br /><br />
 
-V tabuľke máme vypočítané súčiny. Ešte stále však nevieme povedať, aký je vzťah medzi údajmi. Ak by sme súčiny počítali nie pre troch, ale pre 18 000 futbalistov, tak by sa nám vzťah hľadal ťažko. Potrebujeme niečo jednoduchšie, nejaké jedno číslo. Nie je nič jednoduchšie. Spravíme si zo súčinov priemer. Priemer pre súčin overallu a ceny je 455 666 666,67. Priemer pre súčin gk_diving a skill_ball_control je -1 167,67. <br /><br />
+V tabuľke máme vypočítané súčiny. Ešte stále však nevieme povedať, aký je vzťah medzi údajmi. Ak by sme súčiny počítali nie pre troch, ale pre 18 000 futbalistov, tak by sa nám vzťah hľadal ťažko. Potrebujeme niečo jednoduchšie, nejaké jedno číslo. Nie je nič jednoduchšie. Spravíme si zo súčinov priemer. Priemer pre súčin overallu a ceny je 455 666 666,67. Priemer pre súčin gk_diving a skill_ball_control je -1 167,67.<br /><br />
 
-Super, máme jedno číslo a mohli by sme porovnať závislosť. Pri overalle a cene teda platí, že rastú rovnakým smerom. Gk_diving a skill_ball_control rastú každé opačným smerom. Medzi overallom a cenou vyšla závislosť v miliónoch a medzi  gk_diving a skill_ball_control iba v tisícoch. Platí, že overall a cena majú medzi sebou oveľa väčšiu závislosť ako  gk_diving a skill_ball_control? No nie, neplatí. Zase treba prihliadnuť na veľkosť dát.<br /><br />
+Super, máme jedno číslo a mohli by sme porovnať závislosť. Pri overalle a cene teda platí, že rastú rovnakým smerom. Gk_diving a skill_ball_control rastú každé opačným smerom. Medzi overallom a cenou vyšla závislosť v miliónoch a medzi gk_diving a skill_ball_control iba v tisícoch. Platí, že overall a cena majú medzi sebou oveľa väčšiu závislosť ako gk_diving a skill_ball_control? No nie, neplatí. Zase treba prihliadnuť na veľkosť dát.<br /><br />
 
 Ako porovnať nerovnaké dáta sme mali už vo variančnom koeficiente. Riešením bolo spraviť porovnávané údaje relatívne (rozptyl sme vyjadrili na jednu jednotku údajov, pamätáš?). Niečo podobné chceme teda aj tu. To, čo sme teraz porovnali je priemer z rozdielov. Spravíme teda rozdiely relatívne. To znamená, že ich vyjadríme na jednu jednotku. Zatiaľ ešte nevieme na akú.<br /><br />
 
@@ -245,11 +243,11 @@ Tu si vynásobíme rozdiely, medzi ktorými chceme hľadať vzťahy.<br /><br />
 </div>
 <br /><br />
 No a nakoniec súčiny spriemerujeme. Pre Overall * Cena je priemer 0,921. Pre Gk_diving * Skill_ball_control je priemer -0,999. Konečne máme správny výsledok, ktorý môžeme porovnať. Vidíme, že overall a cena rastú rovnakým smerom. Gk_diving a kill_ball_control rastú opačným smerom a medzi nimi je vzťah silnejší ako medzi overllom a cenou.<br /><br />
- 
+
 Keď predchádzajúce výpočty upravíme, dostaneme kovarianciu a korelačný koeficient<br /><br />
 
 <figure>
-  <img src="../assets/images/stat_CorrelationProof.png" alt="Odvodenie korelácie a korelačného koeficientu">
+  <img loading="lazy" src="assets/images/stat_CorrelationProof.png" alt="Odvodenie korelácie a korelačného koeficientu">
   <figcaption>Obr. 1.: Naše výpočty sme upravili a dostali sme koreláciu a korelačný koeficient.</figcaption>
 </figure>
 
@@ -294,16 +292,16 @@ $$
 <br /><br />
 
 <div class='overflowedItem'>
-$$ r=\frac{k}{s_{overall} \cdot s_{cena}} = \frac{913 444 444, 437}{12.57 \cdot 39 381 326.65} =  \frac{455 666 666,67}{495 023 274,9849} = 0,921 $$
+$$ r=\frac{k}{s_{overall} \cdot s_{cena}} = \frac{913 444 444, 437}{12.57 \cdot 39 381 326.65} = \frac{455 666 666,67}{495 023 274,9849} = 0,921 $$
 </div>
 
 Už vieme ako korelačný koeficient prišiel na svet, vieme čo znamená a vieme ho aj vyrátať. Ukážeme si teda, ako vyzerá v praxi. Spravíme si graf, ktorý bude hovoriť o tom, aká je korelácia medzi niektorými atribútmi hráčov Interu Milano. Červené políčko znamená, že korelácia je silná a oba atribúty rastú rovnakým smerom. Korelácia je silná aj keď je políčko tmavomodré, ale tu atribúty rastú opačným smerom. Bledo zelená farba hovorí, že medzi atribútmi vzťah nie je.
 
 <figure>
-  <img src="../assets/images/stat_InterCorrelation.png" alt="Korelácia hráčov Inter Milano">
+  <img loading="lazy" src="assets/images/stat_InterCorrelation.png" alt="Korelácia hráčov Inter Milano">
   <figcaption>Obr. 2.: Korelácia hráčov Interu Milano</figcaption>
 </figure>
 
-Ešte v úvode sme chceli zistiť vzťahy medzi overralom a cenou, medzi výškou a vekom, medzi gk_diving a skill_ball_control. Pozri sa na graf a skús na to prísť sám. Nachvíľu prestaň čítať a pozri sa na ten graf, lebo text pokračuje riešením. Medzi overallom a cenou je korelácia  a rastú tým istým smerom. Vek a výška medzi sebou vzťah nemajú. Medzi gk_diving a skill_ball_control je záporná korelácia, to znamená, že rastie každé iným smerom. Porozmýšľaj aj nad vzťahmi, ktoré majú medzi sebou iné atribúty. Skús podumať aj nad tým, prečo políčka na diagonále majú korelačný koeficient 1.
+Ešte v úvode sme chceli zistiť vzťahy medzi overralom a cenou, medzi výškou a vekom, medzi gk_diving a skill_ball_control. Pozri sa na graf a skús na to prísť sám. Nachvíľu prestaň čítať a pozri sa na ten graf, lebo text pokračuje riešením. Medzi overallom a cenou je korelácia a rastú tým istým smerom. Vek a výška medzi sebou vzťah nemajú. Medzi gk_diving a skill_ball_control je záporná korelácia, to znamená, že rastie každé iným smerom. Porozmýšľaj aj nad vzťahmi, ktoré majú medzi sebou iné atribúty. Skús podumať aj nad tým, prečo políčka na diagonále majú korelačný koeficient 1.
 
 </div>
